--- a/problems/linear.tex
+++ b/problems/linear.tex
@@ -4,10 +4,10 @@
 
 \textbf{Условие.} В общей декартовой системе координат прямая задана пересечением плоскостей:
 \[
-\begin{cases}
-2x + 3y - z - 2 = 0 \\
-4x + y - z + 2 = 0
-\end{cases}
+  \begin{cases}
+    2x + 3y - z - 2 = 0 \\
+    4x + y - z + 2 = 0
+  \end{cases}
 \]
 Найти каноническое уравнение прямой.
 
@@ -17,40 +17,40 @@
 
 Направляющий вектор прямой — это ненулевой вектор из ядра матрицы $A$, т.е. решение однородной системы $Ad = 0$
 \[
-\begin{cases}
-2a + 3b - c = 0 \\
-4a + b - c = 0
-\end{cases} \text{, где} \ d = (a, b, c)
+  \begin{cases}
+    2a + 3b - c = 0 \\
+    4a + b - c = 0
+  \end{cases} \text{, где} \ d = (a, b, c)
 \]
 \[
-(1) - (2) \Rightarrow -2a + 2b = 0 \Leftrightarrow a = b
+  (1) - (2) \Rightarrow -2a + 2b = 0 \Leftrightarrow a = b
 \]
 Подставляя, получим
 \[
-5a - c = 0 \Leftrightarrow c = 5a
+  5a - c = 0 \Leftrightarrow c = 5a
 \]
-Таким образом имеем вектор $d = a (1, 1, 5), a \in \R$. Можно взять $a = 1 \Rightarrow d = (1, 1, 5)$ 
+Таким образом имеем вектор $d = a (1, 1, 5), a \in \R$. Можно взять $a = 1 \Rightarrow d = (1, 1, 5)$
 
 \textbf{Шаг 2. Находим точку на прямой.}
 
 Положим $z = 0$ и решим систему:
 \[
-\begin{cases}
-2x + 3y = 2 \\
-4x + y = -2
-\end{cases}
+  \begin{cases}
+    2x + 3y = 2 \\
+    4x + y = -2
+  \end{cases}
 \]
 
 Из второго уравнения: $y = -2 - 4x$.
 
 Подставляем в первое:
 \[
-2x + 3(-2 - 4x) = 2 \quad \Rightarrow \quad 2x - 6 - 12x = 2 \quad \Rightarrow \quad -10x = 8 \quad \Rightarrow \quad x = -\frac{4}{5}.
+  2x + 3(-2 - 4x) = 2 \quad \Rightarrow \quad 2x - 6 - 12x = 2 \quad \Rightarrow \quad -10x = 8 \quad \Rightarrow \quad x = -\frac{4}{5}.
 \]
 
 Тогда:
 \[
-y = -2 - 4 \cdot \left(-\frac{4}{5}\right) = -2 + \frac{16}{5} = \frac{-10 + 16}{5} = \frac{6}{5}.
+  y = -2 - 4 \cdot \left(-\frac{4}{5}\right) = -2 + \frac{16}{5} = \frac{-10 + 16}{5} = \frac{6}{5}.
 \]
 
 Точка на прямой: $M_0 = \left(-\frac{4}{5}, \frac{6}{5}, 0\right)$.
@@ -59,22 +59,22 @@ y = -2 - 4 \cdot \left(-\frac{4}{5}\right) = -2 + \frac{16}{5} = \frac{-10 + 16}
 
 Каноническое уравнение прямой:
 \[
-\frac{x - x_0}{s_x} = \frac{y - y_0}{s_y} = \frac{z - z_0}{s_z}.
+  \frac{x - x_0}{s_x} = \frac{y - y_0}{s_y} = \frac{z - z_0}{s_z}.
 \]
 
 Подставляем:
 \[
-\boxed{\frac{x + \frac{4}{5}}{1} = \frac{y - \frac{6}{5}}{1} = \frac{z - 0}{5}}
+  \boxed{\frac{x + \frac{4}{5}}{1} = \frac{y - \frac{6}{5}}{1} = \frac{z - 0}{5}}
 \]
 
 \subsubsection{9. Система линейных уравнений}
 
 \textbf{Условие.} Найти общее решение системы линейных уравнений с 5 неизвестными, указать частное решение и ФСР однородной системы:
 \[
-\begin{cases}
-3x_1 + 2x_2 + x_3 - x_4 = 7 \\
--2x_1 + 3x_2 + 12x_3 + 2x_5 = 18
-\end{cases}
+  \begin{cases}
+    3x_1 + 2x_2 + x_3 - x_4 = 7 \\
+    -2x_1 + 3x_2 + 12x_3 + 2x_5 = 18
+  \end{cases}
 \]
 
 \Solution
@@ -82,39 +82,39 @@ y = -2 - 4 \cdot \left(-\frac{4}{5}\right) = -2 + \frac{16}{5} = \frac{-10 + 16}
 \textbf{Шаг 1. Записываем расширенную матрицу.}
 
 \[
-\left(
-\begin{array}{ccccc|c}
-3 & 2 & 1 & -1 & 0 & 7 \\
--2 & 3 & 12 & 0 & 2 & 18
-\end{array}
-\right)
+  \left(
+    \begin{array}{ccccc|c}
+      3 & 2 & 1 & -1 & 0 & 7 \\
+      -2 & 3 & 12 & 0 & 2 & 18
+    \end{array}
+  \right)
 \]
 
-Заметим, что в матрице достаточно удачно уже выражены $x_4, x_5$, таким образом что они не зависят друг от друга. Можем положить их базисными переменными, а свободными оставить остальные (т.к ранг матрицы - 2, необходимо ровно 2 базисных переменных).
+Заметим, что в матрице достаточно удачно уже выражены $x_4, x_5$, таким образом что они не зависят друг от друга. Можем положить их базисными переменными, а свободными
+оставить остальные (т.к ранг матрицы - 2, необходимо ровно 2 базисных переменных).
 
 \textbf{Шаг 2. Выражаем базисные переменные.}
 
 \[
-x_4 = 3x_1 + 2x_2 + x_3 - 7
+  x_4 = 3x_1 + 2x_2 + x_3 - 7
 \]
 \[
-x_5 = x_1 - 1.5x_2 - 6x_3 + 9
+  x_5 = x_1 - 1.5x_2 - 6x_3 + 9
 \]
-
 
 \textbf{Шаг 4. Общее решение.}
 
 Обозначим $x_1 = t$, $x_2 = s$, $x_3 = u$ — свободные параметры.
 
 \[
-x_4 = 3t + 2s + u - 7, \quad x_5 = t - 1.5s - 6u + 9.
+  x_4 = 3t + 2s + u - 7, \quad x_5 = t - 1.5s - 6u + 9.
 \]
 
 \textbf{Шаг 5. Частное решение.}
 
 При $t = s = u = 0$:
 \[
-x_1 = 0, \quad x_2 = 0, \quad x_3 = 0, \quad x_4 = -7, \quad x_5 = 9.
+  x_1 = 0, \quad x_2 = 0, \quad x_3 = 0, \quad x_4 = -7, \quad x_5 = 9.
 \]
 
 Частное решение: $\vec{x}_{\text{ч}} = \left( 0, 0, 0, -7, 9 \right)$.
@@ -125,34 +125,34 @@ x_1 = 0, \quad x_2 = 0, \quad x_3 = 0, \quad x_4 = -7, \quad x_5 = 9.
 
 Общее решение однородной системы:
 \[
-x_1 = t, \quad x_2 = s, \quad x_3 = u, \quad x_4 = 3t + 2s + u, \quad x_5 = t - 1.5s - 6u.
+  x_1 = t, \quad x_2 = s, \quad x_3 = u, \quad x_4 = 3t + 2s + u, \quad x_5 = t - 1.5s - 6u.
 \]
 
 ФСР состоит из трёх векторов (по числу свободных переменных, или же $k = n - r = 5 - 2 = 3$):
 
 При $t = 1, s = 0, u = 0$:
 \[
-\vec{e}_1 = \left( 1, 0, 0, 3, 1 \right).
+  \vec{e}_1 = \left( 1, 0, 0, 3, 1 \right).
 \]
 
 При $t = 0, s = 1, u = 0$:
 \[
-\vec{e}_2 = \left( 0, 1, 0, 2, -3/2 \right).
+  \vec{e}_2 = \left( 0, 1, 0, 2, -3/2 \right).
 \]
 
 При $t = 0, s = 0, u = 1$:
 \[
-\vec{e}_3 = \left( 0, 0, 1, 1, -6 \right).
+  \vec{e}_3 = \left( 0, 0, 1, 1, -6 \right).
 \]
 
 \subsubsection{10. Ортогональное дополнение подпространства}
 
-\textbf{Условие.} В евклидовом пространстве подпространство $L$ задано системой линейных уравнений с матрицей 
+\textbf{Условие.} В евклидовом пространстве подпространство $L$ задано системой линейных уравнений с матрицей
 \[
-\begin{pmatrix}
-1 & 1 & 1 & -17 \\
-2 & -13 & 0 & 1
-\end{pmatrix}
+  \begin{pmatrix}
+    1 & 1 & 1 & -17 \\
+    2 & -13 & 0 & 1
+  \end{pmatrix}
 \]
 в ОНБ. Найти базис в ортогональном дополнении $L^\perp$ подпространства $L$.
 
@@ -162,45 +162,46 @@ x_1 = t, \quad x_2 = s, \quad x_3 = u, \quad x_4 = 3t + 2s + u, \quad x_5 = t - 
 
 Ортогональное дополнение есть множество векторов, таких, что каждый вектор из множества ортогонален всем векторам из $L$. Т.е можно записать это так:
 \[
-\begin{cases}
-  (a_1, x) = 0 \\
-  (a_2, x) = 0
-\end{cases} \Leftrightarrow Ax = 0
+  \begin{cases}
+    (a_1, x) = 0 \\
+    (a_2, x) = 0
+  \end{cases} \Leftrightarrow Ax = 0
 \]
 
-Это пространство можно задать $n-k = 4 - 2 = 2$ векторами $b_i$, такими, что для каждого из них верно $(b_i, a_j) = 0 \ \forall i, j$, а также эти векторы должны быть ЛНЗ. Но мы же буквально написали определение ФСР. То есть задача свелась к нахождению ФСР системы $A$. Сделаем это
+Это пространство можно задать $n-k = 4 - 2 = 2$ векторами $b_i$, такими, что для каждого из них верно $(b_i, a_j) = 0 \ \forall i, j$, а также эти векторы должны быть
+ЛНЗ. Но мы же буквально написали определение ФСР. То есть задача свелась к нахождению ФСР системы $A$. Сделаем это
 
 \[
-\begin{pmatrix}
-  1 & 1 & 1 & -17 \\
-  2 & -13 & 0 & 1
-\end{pmatrix} \sim 
-\begin{pmatrix}
-  0 & 15 & 2 & -35 \\
-  2 & -13 & 0 & 1 
-\end{pmatrix}
+  \begin{pmatrix}
+    1 & 1 & 1 & -17 \\
+    2 & -13 & 0 & 1
+  \end{pmatrix} \sim
+  \begin{pmatrix}
+    0 & 15 & 2 & -35 \\
+    2 & -13 & 0 & 1
+  \end{pmatrix}
 \]
 Возьмем $x_1, x_3$ как базисные, $x_2, x_4$ как свободные:
 \[
-x_1 = 6.5 s - 0.5 t \quad x_3 = -7.5 s + 17.5 t \quad x_2 = s \quad x_4 = t
+  x_1 = 6.5 s - 0.5 t \quad x_3 = -7.5 s + 17.5 t \quad x_2 = s \quad x_4 = t
 \]
 Осталось просто написать ФСР:
 \begin{enumerate}
   \item $s = 1, t = 0$
-  \[
-  (6.5, 1, -7.5, 0) \sim (13, 2, -15, 0)
-  \]
+    \[
+      (6.5, 1, -7.5, 0) \sim (13, 2, -15, 0)
+    \]
   \item $s = 0, t = 1$
-  \[
-  (-0.5, 0, 17.5, 1) \sim (-1, 0, 35, 2)
-  \]
+    \[
+      (-0.5, 0, 17.5, 1) \sim (-1, 0, 35, 2)
+    \]
 \end{enumerate}
 
 Это и есть базис в $L^T$ по утверждениям в начале.
 \[
-\begin{pmatrix}
-  13 & 2 & -15 & 0 \\
-  -1 & 0 & 35 & 2
-\end{pmatrix}
+  \begin{pmatrix}
+    13 & 2 & -15 & 0 \\
+    -1 & 0 & 35 & 2
+  \end{pmatrix}
 \]
 Несложно в этом убедиться, посчитав в уме скалярные произведения.
