--- a/solutions/analysis/7.tex
+++ b/solutions/analysis/7.tex
@@ -1,9 +1,10 @@
 \subsection{Теорема о равномерной непрерывности функции, непрерывной на компакте.}
 
-\Def Функция $f: X \to Y$ (где $X, Y$ --- произвольные метрические пространства) называется равномерно непрерывной на $M \subset X$, если 
+\Def Функция $f: X \to Y$ (где $X, Y$ --- произвольные метрические пространства) называется равномерно непрерывной на $M \subset X$, если
 
 \begin{equation*}
-    \forall \eps > 0 \;\exists\delta > 0: \;\forall x_1, x_2 \in M \hookrightarrow \left(\rho_X(x_1, x_2) < \delta\right) \implies \left(\rho_Y\left(f(x_1), f(x_2)\right) < \eps\right).
+  \forall \eps > 0 \;\exists\delta > 0: \;\forall x_1, x_2 \in M \hookrightarrow \left(\rho_X(x_1, x_2) < \delta\right) \implies \left(\rho_Y\left(f(x_1), f(x_2)\right)
+  < \eps\right).
 \end{equation*}
 
 \Th Пусть $(X, \rho_X), (Y, \rho_Y)$ --- метрические пространства; $A \subset X$ --- компакт; $f: A \to Y$ непрерывна.
@@ -12,24 +13,27 @@
 
 \Proof
 
-Предположим, что $f$ -- непрерывна на компакте $A$, но не равномерно непрерывна на нем. Тогда из отрицания определения 
+Предположим, что $f$ -- непрерывна на компакте $A$, но не равномерно непрерывна на нем. Тогда из отрицания определения
 
 \begin{equation*}
-    \exists \eps > 0 \;\forall \delta > 0 \;\exists x, y \in A: \rho_X(x, y) < \delta \text{ и } \rho_Y(f(x), f(y)) \geq \eps.    
+  \exists \eps > 0 \;\forall \delta > 0 \;\exists x, y \in A: \rho_X(x, y) < \delta \text{ и } \rho_Y(f(x), f(y)) \geq \eps.
 \end{equation*}
 
-Раз это верно для любого $\delta$, то построим последовательности $\{x_k\}, \{y_k\}$, такие что $\rho_X(x_k, y_k) < \frac{1}{k}$ и $\rho_Y(f(x_k), f(y_k)) \geq \eps$ для $\forall k \in \N$.
+Раз это верно для любого $\delta$, то построим последовательности $\{x_k\}, \{y_k\}$, такие что $\rho_X(x_k, y_k) < \frac{1}{k}$ и $\rho_Y(f(x_k), f(y_k)) \geq \eps$ для
+$\forall k \in \N$.
 
-Раз $A$ -- компакт, из $\{x_k\}$ можно выделить сходящуюся в $A$ подпоследовательность: $x_{k_j} \to c \in A$. 
+Раз $A$ -- компакт, из $\{x_k\}$ можно выделить сходящуюся в $A$ подпоследовательность: $x_{k_j} \to c \in A$.
 
-А так как расстояние между соответствующими членами подпоследовательностей стремится к 0, то, воспользовавшись неравенством треугольника, получаем, что соответствующие подпоследовательности стремятся к одной точке: 
+А так как расстояние между соответствующими членами подпоследовательностей стремится к 0, то, воспользовавшись неравенством треугольника, получаем, что соответствующие
+подпоследовательности стремятся к одной точке:
 
 \begin{equation*}
-    \rho_X(y_{k_j}, c) \leq \rho_X(y_{k_j}, x_{k_j}) + \rho_X(x_{k_j}, c)
+  \rho_X(y_{k_j}, c) \leq \rho_X(y_{k_j}, x_{k_j}) + \rho_X(x_{k_j}, c)
 \end{equation*}
 
 Итого $y_{k_j} \to c$.
 
-Так как $f$ непрерывна, $f(x_{k_j}) \to f(c), f(y_{k_j}) \to f(c) \implies \rho_Y(f(x_{k_j}), f(y_{k_j})) \to 0$, что противоречит предположению, что $\rho_Y(f(x_k), f(y_k)) \geq \eps$.
+Так как $f$ непрерывна, $f(x_{k_j}) \to f(c), f(y_{k_j}) \to f(c) \implies \rho_Y(f(x_{k_j}), f(y_{k_j})) \to 0$, что противоречит предположению, что $\rho_Y(f(x_k),
+f(y_k)) \geq \eps$.
 
 \Endproof
