--- a/solutions/logic/29.tex
+++ b/solutions/logic/29.tex
@@ -4,7 +4,8 @@
 
 \Def Если считаем, что $\forall u, v \in V \; (u, v) = (v, u)$, то граф называется \textit{неориентированным}.
 
-\Def Граф называется \textit{ориентированным}, если ребро задаётся \textit{упорядоченной} парой вершин: $(u,v)\in E$ и $(v,u)\in E$ — независимые ребра и могут как присутствовать одновременно, так и отсутствовать.
+\Def Граф называется \textit{ориентированным}, если ребро задаётся \textit{упорядоченной} парой вершин: $(u,v)\in E$ и $(v,u)\in E$ — независимые ребра и могут как
+присутствовать одновременно, так и отсутствовать.
 
 \Def Маршрутом в графе называют последовательность $(v_1, e_1, v_2, e_2 \dots e_k, v_{k+1})$, где $v_i \in V$, $e_i = (v_i, v_{i+1}) \in E$.
 
@@ -23,47 +24,51 @@
 \Statement Следующие определения \textit{дерева} эквивалентны:
 
 \begin{enumerate}
-    \item Связный граф без циклов
-    \item Между любыми двумя вершинами существует ровно один простой путь
-    \item Связный граф, в котором $|E| = |V| - 1$
-    \item Граф без циклов, в котором $|E| = |V| - 1$
+  \item Связный граф без циклов
+  \item Между любыми двумя вершинами существует ровно один простой путь
+  \item Связный граф, в котором $|E| = |V| - 1$
+  \item Граф без циклов, в котором $|E| = |V| - 1$
 \end{enumerate}
 
 $\square$
 
-План доказательства: 
+План доказательства:
 
 \begin{enumerate}
-    \item $(1) \Rightarrow (2)$
-    \item $(2) \Rightarrow (3)$
-    \item $(3) \Rightarrow (4)$
-    \item $(4) \Rightarrow (1)$
+  \item $(1) \Rightarrow (2)$
+  \item $(2) \Rightarrow (3)$
+  \item $(3) \Rightarrow (4)$
+  \item $(4) \Rightarrow (1)$
 \end{enumerate}
 
 Доказательство:
 
 \begin{enumerate}
-    \item $(1) \Rightarrow (2)$ Пусть граф связный. Из этого следует существование $\ge 1$ простого пути между любыми двумя вершинами.
+  \item $(1) \Rightarrow (2)$ Пусть граф связный. Из этого следует существование $\ge 1$ простого пути между любыми двумя вершинами.
 
-    Пусть существуют $v_s, v_t \in V$, между которыми существует $\ge 2$ простых пути. Рассмотрим $E_1, E_2$ --- ребра первого и второго пути. Тогда их симметрическая разность $E_1 \,\Delta\, E_2$ является объединением циклов, то есть в графе есть цикл — противоречие с (1).
+    Пусть существуют $v_s, v_t \in V$, между которыми существует $\ge 2$ простых пути. Рассмотрим $E_1, E_2$ --- ребра первого и второго пути. Тогда их симметрическая
+    разность $E_1 \,\Delta\, E_2$ является объединением циклов, то есть в графе есть цикл — противоречие с (1).
 
-    \item $(2) \Rightarrow (3)$ Связность графа следует из того, что между любыми вершинами существует путь.
+  \item $(2) \Rightarrow (3)$ Связность графа следует из того, что между любыми вершинами существует путь.
 
     Докажем по индукции по $|V|$, что тогда $|E|=|V|-1$.
 
     \textbf{База.} $|V|=1$. Тогда $|E|=0$.
 
-    \textbf{Переход.} Пусть $|V|\ge 2$ и выполнено (2). Возьмём самый длинный простой путь $v_0\!-\!v_1\!-\!\dots\!-\!v_m$. Тогда вершина $v_0$ имеет степень $1$: иначе была бы вершина $u\neq v_1$, смежная с $v_0$, и путь можно было бы продлить. Удалим $v_0$ и инцидентное ей ребро; получим граф $G'$ на $|V|-1$ вершинах, в котором между любыми двумя вершинами по-прежнему существует ровно один простой путь (иначе в исходном графе было бы \(\ge 2\)). По предположению индукции $|E(G')|=|V(G')|-1$. Тогда
+    \textbf{Переход.} Пусть $|V|\ge 2$ и выполнено (2). Возьмём самый длинный простой путь $v_0\!-\!v_1\!-\!\dots\!-\!v_m$. Тогда вершина $v_0$ имеет степень $1$: иначе
+    была бы вершина $u\neq v_1$, смежная с $v_0$, и путь можно было бы продлить. Удалим $v_0$ и инцидентное ей ребро; получим граф $G'$ на $|V|-1$ вершинах, в котором
+    между любыми двумя вершинами по-прежнему существует ровно один простой путь (иначе в исходном графе было бы \(\ge 2\)). По предположению индукции $|E(G')|=|V(G')|-1$. Тогда
     \[
-    |E| = |E(G')|+1 = (|V|-1-1)+1 = |V|-1.
+      |E| = |E(G')|+1 = (|V|-1-1)+1 = |V|-1.
     \]
 
-    \item $(3) \Rightarrow (4)$
-    Предположим противное, пусть есть цикл. Тогда из него можно выделить простой цикл. Посмотрим на него: $v_1 \to v_2 \dots \to v_n \to v_1$. Для каждой вершины не из цикла рассмотрим первое ребро ее кратчайшего пути к вершине из цикла. Для каждой вершины это ребро будет уникальным. Но тогда в графе $\ge n + (|V| - n) = |V|$ ребер. 
-    
+  \item $(3) \Rightarrow (4)$
+    Предположим противное, пусть есть цикл. Тогда из него можно выделить простой цикл. Посмотрим на него: $v_1 \to v_2 \dots \to v_n \to v_1$. Для каждой вершины не из
+    цикла рассмотрим первое ребро ее кратчайшего пути к вершине из цикла. Для каждой вершины это ребро будет уникальным. Но тогда в графе $\ge n + (|V| - n) = |V|$ ребер.
+
     Получили противоречие.
 
-    \item $(4) \Rightarrow (1)$
+  \item $(4) \Rightarrow (1)$
     Пусть граф не является связным. Тогда разобъем его на $m \ge 2$ компоненты связности.
 
     По индукции докажем, что в связном графе без циклов ровно $|V| - 1$ ребро.
