--- a/solutions/logic/33.tex
+++ b/solutions/logic/33.tex
@@ -3,33 +3,36 @@
 \Def \textit{Машиной Тьюринга} называется кортеж $(\Sigma, Q, F, q_0, \delta, \Lambda)$, где:
 
 \begin{enumerate}
-    \item $\Sigma$ --- конечный алфавит.
-    \item $Q$ --- конечное множество состояний.
-    \item $\Sigma \cap Q = \varnothing$.
-    \item $F \subset Q, q_0 \in Q$ --- финальные и начальное состояние.
-    \item $\Lambda \in \Sigma$ --- пробельный символ
-    \item $\delta : \Sigma \times Q \to \Sigma \times \{-1, 0, 1\} \times Q$ --- правила перехода.
+  \item $\Sigma$ --- конечный алфавит.
+  \item $Q$ --- конечное множество состояний.
+  \item $\Sigma \cap Q = \varnothing$.
+  \item $F \subset Q, q_0 \in Q$ --- финальные и начальное состояние.
+  \item $\Lambda \in \Sigma$ --- пробельный символ
+  \item $\delta : \Sigma \times Q \to \Sigma \times \{-1, 0, 1\} \times Q$ --- правила перехода.
 \end{enumerate}
 
-На вход в МТ подается слово, каретка установлена на его начало. Лента в обе стороны бесконечна и заполнена пробельными символами. На каждом шаге (такте) рассматривается текущее состояние и символ на ленте под кареткой. По $\delta$ определяется новая буква на этой позиции, сдвиг каретки и смена состояния. При попадании в одно из финальных (терминальных) состояний МТ останавливается.
+На вход в МТ подается слово, каретка установлена на его начало. Лента в обе стороны бесконечна и заполнена пробельными символами. На каждом шаге (такте) рассматривается
+текущее состояние и символ на ленте под кареткой. По $\delta$ определяется новая буква на этой позиции, сдвиг каретки и смена состояния. При попадании в одно из
+финальных (терминальных) состояний МТ останавливается.
 
-\Def МТ $\mathcal{M}$ \textit{разрешает} язык $\mathcal{L}$, если 
+\Def МТ $\mathcal{M}$ \textit{разрешает} язык $\mathcal{L}$, если
 \begin{enumerate}
-    \item $\forall x \in \mathcal{L}$ $\mathcal{M}$ останавливается в $q_{yes}$
-    \item $\forall x \notin \mathcal{L}$ $\mathcal{M}$ останавливается в $q_{no}$
+  \item $\forall x \in \mathcal{L}$ $\mathcal{M}$ останавливается в $q_{yes}$
+  \item $\forall x \notin \mathcal{L}$ $\mathcal{M}$ останавливается в $q_{no}$
 \end{enumerate}
 
 Такой язык называется \textit{разрешимым}.
 
-\Def МТ $\mathcal{M}$ \textit{допускает} язык $\mathcal{L}$, если 
+\Def МТ $\mathcal{M}$ \textit{допускает} язык $\mathcal{L}$, если
 \begin{enumerate}
-    \item $\forall x \in \mathcal{L}$ $\mathcal{M}$ останавливается в $q_{yes}$
-    \item $\forall x \notin \mathcal{L}$ $\mathcal{M}$ не останавливается в $q_{yes}$ (может остановиться в $q_{no}$ или работать бесконечно)
+  \item $\forall x \in \mathcal{L}$ $\mathcal{M}$ останавливается в $q_{yes}$
+  \item $\forall x \notin \mathcal{L}$ $\mathcal{M}$ не останавливается в $q_{yes}$ (может остановиться в $q_{no}$ или работать бесконечно)
 \end{enumerate}
 
 Такой язык называется \textit{допустимым}.
 
-\Def МТ $\mathcal{M}$ \textit{перечисляет} язык $\mathcal{L}$, если $\mathcal{M}$, работая с пустого входа, печатает на ленте все слова $\mathcal{L}$ (через разделяющий символ) таким образом, что любое слово из $\mathcal{L}$ появится на ленте за \underline{конечное} время. Слово не из $\mathcal{L}$ на ленте не появится никогда.
+\Def МТ $\mathcal{M}$ \textit{перечисляет} язык $\mathcal{L}$, если $\mathcal{M}$, работая с пустого входа, печатает на ленте все слова $\mathcal{L}$ (через разделяющий
+символ) таким образом, что любое слово из $\mathcal{L}$ появится на ленте за \underline{конечное} время. Слово не из $\mathcal{L}$ на ленте не появится никогда.
 
 Такой язык называется \textit{перечислимым}.
 
@@ -39,18 +42,23 @@ $\mathcal{L}$ перечислим $\iff$ $\mathcal{L}$ допустим
 
 $\square$
 \begin{itemize}
-    \item $\Rightarrow$
-    
-    Возьмем $\mathcal{M}$, перечисляющую $\mathcal{L}$. Построим $\mathcal{M}'$, которая будет эмулировать вывод очередного слова у исходной машины и проверять, равно ли оно $x$ (переходя в $q_{yes}$ в случае положительного результата). Если $x \in \mathcal{L}$, то это будет определено за конечное время, в противном случае $\mathcal{M}'$ не остановится, либо перейдет в $q_{no}$ при остановке $\mathcal{M}$.
+  \item $\Rightarrow$
 
-    \item $\Leftarrow$
+    Возьмем $\mathcal{M}$, перечисляющую $\mathcal{L}$. Построим $\mathcal{M}'$, которая будет эмулировать вывод очередного слова у исходной машины и проверять, равно ли
+    оно $x$ (переходя в $q_{yes}$ в случае положительного результата). Если $x \in \mathcal{L}$, то это будет определено за конечное время, в противном случае
+    $\mathcal{M}'$ не остановится, либо перейдет в $q_{no}$ при остановке $\mathcal{M}$.
 
-    Пусть $\mathcal{M}$ допускает язык $\mathcal{L}$. Соберем бесконечную таблицу: сверху будет возрастающее количество тактов, слева --- все возможные слова по порядку. $\mathcal{M}'$ будет обходить ее змейкой и запускать $\mathcal{M}$ с нужным входным словом на соответствующее число тактов. Если $\mathcal{M}$ остановилась в $q_{yes}$, то выведем текущее слово. В результате получили МТ, которая перечисляет $\mathcal{L}$, т. к. выводятся только слова из $\mathcal{L}$, при этом любое слово будет выведено за конечное время.
+  \item $\Leftarrow$
+
+    Пусть $\mathcal{M}$ допускает язык $\mathcal{L}$. Соберем бесконечную таблицу: сверху будет возрастающее количество тактов, слева --- все возможные слова по порядку.
+    $\mathcal{M}'$ будет обходить ее змейкой и запускать $\mathcal{M}$ с нужным входным словом на соответствующее число тактов. Если $\mathcal{M}$ остановилась в
+    $q_{yes}$, то выведем текущее слово. В результате получили МТ, которая перечисляет $\mathcal{L}$, т. к. выводятся только слова из $\mathcal{L}$, при этом любое слово
+    будет выведено за конечное время.
 
     \begin{figure}[H]
-            \centering
-            \includegraphics[width=0.40\linewidth]{33_1.png}
-            \caption{Пример таблицы}
+      \centering
+      \includegraphics[width=0.40\linewidth]{33_1.png}
+      \caption{Пример таблицы}
     \end{figure}
 \end{itemize}
 $\blacksquare$
@@ -59,13 +67,13 @@ $\blacksquare$
 
 Количество МТ счетно, языков всего $2^{\Sigma^*}$ --- более чем счетно.
 
-\Def 
+\Def
 
-$f: \mathbb{N}^k \to \mathbb{N}$ называется \textit{вычислимой}, если существует МТ $\mathcal{M}$ : $\forall (x_1, x_2, \dots x_k)$ из области определения $f$ по входу 
+$f: \mathbb{N}^k \to \mathbb{N}$ называется \textit{вычислимой}, если существует МТ $\mathcal{M}$ : $\forall (x_1, x_2, \dots x_k)$ из области определения $f$ по входу
 
-$\underbrace{1 1 \dots 1}_{x_1} \# \underbrace{1 1 \dots 1}_{x_2} \# \dots \# \underbrace{1 1 \dots 1}_{x_k}$ 
+$\underbrace{1 1 \dots 1}_{x_1} \# \underbrace{1 1 \dots 1}_{x_2} \# \dots \# \underbrace{1 1 \dots 1}_{x_k}$
 
-останавливается за конечное время с 
+останавливается за конечное время с
 
 $\underbrace{1 1 \dots 1}_{f(x_1, x_2, \dots x_k) + 1}$
 
@@ -90,8 +98,8 @@ $\square$
 $
 \mathcal{H}(\mathcal{M}, w) =
 \begin{cases}
-1, & \mathcal{M} \; \text{останавливается на} \; w\\
-0, & \mathcal{M} \; \text{не останавливается на} \; w\\
+  1, & \mathcal{M} \; \text{останавливается на} \; w\\
+  0, & \mathcal{M} \; \text{не останавливается на} \; w\\
 \end{cases}
 $
 
@@ -100,8 +108,8 @@ $
 Построим МТ $\mathcal{H}'$, которая принимает на вход $i$ и запускает вычисление $\mathcal{F}(i)$.
 
 \begin{enumerate}
-    \item Если вычисление $\mathcal{F}(i)$ завершилось с результатом 1, то $H'$ переходит в вечный цикл.
-    \item Если вычисление $\mathcal{F}(i)$ завершилось с результатом 0, то $H'$ останавливается.
+  \item Если вычисление $\mathcal{F}(i)$ завершилось с результатом 1, то $H'$ переходит в вечный цикл.
+  \item Если вычисление $\mathcal{F}(i)$ завершилось с результатом 0, то $H'$ останавливается.
 \end{enumerate}
 
 Но у $\mathcal{H}$ есть свой номер $N$.
@@ -109,15 +117,17 @@ $
 Теперь рассмотрим работу $\mathcal{H'}(N)$.
 
 \begin{enumerate}
-    \item Если $\mathcal{H'}$ остановилась, то $\mathcal{F}(N) = 0$ по определению $\mathcal{H}'$, но из определения $\mathcal{H}$ следует $\mathcal{F}(N) = \mathcal{H}(\mathcal{M}_N, N) = \mathcal{H}(\mathcal{H}', N) = 1$. Получили противоречие.
-    \item Если $\mathcal{H'}$ не остановилась, то $\mathcal{F}(N) = 1$ по определению $\mathcal{H}'$, но из определения $\mathcal{H}$ следует $\mathcal{F}(N) = \mathcal{H}(\mathcal{M}_N, N) = \mathcal{H}(\mathcal{H}', N) = 0$. Получили противоречие.
+  \item Если $\mathcal{H'}$ остановилась, то $\mathcal{F}(N) = 0$ по определению $\mathcal{H}'$, но из определения $\mathcal{H}$ следует $\mathcal{F}(N) =
+    \mathcal{H}(\mathcal{M}_N, N) = \mathcal{H}(\mathcal{H}', N) = 1$. Получили противоречие.
+  \item Если $\mathcal{H'}$ не остановилась, то $\mathcal{F}(N) = 1$ по определению $\mathcal{H}'$, но из определения $\mathcal{H}$ следует $\mathcal{F}(N) =
+    \mathcal{H}(\mathcal{M}_N, N) = \mathcal{H}(\mathcal{H}', N) = 0$. Получили противоречие.
 \end{enumerate}
 
 $\blacksquare$
 
 \textbf{Функция трудолюбия Радо}
 
-\Def 
+\Def
 
 $R(n) :=$ \\ Количество единиц, которое может вывести на ленту и остановиться МТ с не более чем $n$ состояниями, начиная с пустого входа.
 
@@ -136,9 +146,9 @@ $\square$
 Построим МТ с $3n + 1 + C_1 + C_2$ состояниями, которая будет:
 
 \begin{enumerate}
-    \item Печатать на ленту $4n + 1$ единицу.
-    \item Возвращаться в начало слова.
-    \item Запускать $\mathcal{M}_R$.
+  \item Печатать на ленту $4n + 1$ единицу.
+  \item Возвращаться в начало слова.
+  \item Запускать $\mathcal{M}_R$.
 \end{enumerate}
 
 Тогда $R(3n + 1 + C_1 + C_2) \ge R(4n)$. Получим противоречие при достаточно больших $n$.
@@ -156,6 +166,6 @@ $\blacksquare$
 Пусть $\mathcal{A} \le_m \mathcal{B}$
 
 \begin{itemize}
-    \item Если $\mathcal{B}$ разрешимый, то $\mathcal{A}$ тоже.
-    \item Если $\mathcal{A}$ не разрешимый, то $\mathcal{B}$ тоже.
+  \item Если $\mathcal{B}$ разрешимый, то $\mathcal{A}$ тоже.
+  \item Если $\mathcal{A}$ не разрешимый, то $\mathcal{B}$ тоже.
 \end{itemize}
