--- a/solutions/statistics/common.tex
+++ b/solutions/statistics/common.tex
@@ -4,17 +4,17 @@
 
 \Def \hypertarget{probability_convergence}{Последовательность $\xi_n$ сходится к $\xi$ \textit{по вероятности} ($\xi_n \xrightarrow{P} \xi$)}, если
 \[
-\forall \varepsilon > 0: \quad \lim_{n \to \infty} P(|\xi_n - \xi| > \varepsilon) = 0.
+  \forall \varepsilon > 0: \quad \lim_{n \to \infty} P(|\xi_n - \xi| > \varepsilon) = 0.
 \]
 
 \Def Последовательность $\xi_n$ сходится к $\xi$ \textit{почти наверное} ($\xi_n \xrightarrow{\text{п.н.}} \xi$), если
 \[
-P(\omega: \xi_n(\omega) \rightarrow \xi(\omega)) = 1.
+  P(\omega: \xi_n(\omega) \rightarrow \xi(\omega)) = 1.
 \]
 
 \Def Последовательность $\xi_n$ сходится к $\xi$ \textit{по распределению} (слабо, $\xi_n \xrightarrow{d} \xi$), если
 \[
-\lim_{n \to \infty} F_{\xi_n}(x) = F_\xi(x) \quad \text{во всех точках непрерывности } F_\xi.
+  \lim_{n \to \infty} F_{\xi_n}(x) = F_\xi(x) \quad \text{во всех точках непрерывности } F_\xi.
 \]
 
 \textbf{Замечание.} Иерархия: п.н. $\Rightarrow$ по вероятности $\Rightarrow$ по распределению. Обратные импликации в общем случае неверны.
@@ -25,7 +25,7 @@ P(\omega: \xi_n(\omega) \rightarrow \xi(\omega)) = 1.
 
 Пусть $X_1, X_2, \ldots$ — независимые одинаково распределённые случайные величины с $\mathbb{E}|X_1| < \infty$. Тогда
 \[
-\overline{X}_n = \frac{X_1 + \ldots + X_n}{n} \xrightarrow{\text{п.н.}} \mathbb{E}X_1.
+  \overline{X}_n = \frac{X_1 + \ldots + X_n}{n} \xrightarrow{\text{п.н.}} \mathbb{E}X_1.
 \]
 
 \textbf{Замечание.} В отличие от ЗБЧ Чебышева, здесь сходимость почти наверное (более сильная), и достаточно конечности первого момента (не второго).
@@ -36,7 +36,7 @@ P(\omega: \xi_n(\omega) \rightarrow \xi(\omega)) = 1.
 
 Пусть $\xi_n \xrightarrow{P} \xi$ (или $\xi_n \xrightarrow{\text{п.н.}} \xi$, или $\xi_n \xrightarrow{d} \xi$), и $g$ — непрерывная функция. Тогда
 \[
-g(\xi_n) \xrightarrow{P} g(\xi) \quad \text{(соотв. п.н., соотв. } d\text{)}.
+  g(\xi_n) \xrightarrow{P} g(\xi) \quad \text{(соотв. п.н., соотв. } d\text{)}.
 \]
 
 \textbf{Замечание.} Непрерывное отображение сохраняет тип сходимости.
@@ -47,9 +47,9 @@ g(\xi_n) \xrightarrow{P} g(\xi) \quad \text{(соотв. п.н., соотв. } d
 
 Пусть $\xi_n \xrightarrow{d} \xi$ и $\eta_n \xrightarrow{P} c$ (константа). Тогда:
 \begin{enumerate}
-    \item $\xi_n + \eta_n \xrightarrow{d} \xi + c$;
-    \item $\xi_n \cdot \eta_n \xrightarrow{d} c \cdot \xi$;
-    \item $\frac{\xi_n}{\eta_n} \xrightarrow{d} \frac{\xi}{c}$ при $c \neq 0$.
+  \item $\xi_n + \eta_n \xrightarrow{d} \xi + c$;
+  \item $\xi_n \cdot \eta_n \xrightarrow{d} c \cdot \xi$;
+  \item $\frac{\xi_n}{\eta_n} \xrightarrow{d} \frac{\xi}{c}$ при $c \neq 0$.
 \end{enumerate}
 
 \textbf{Замечание.} Лемма Слуцкого позволяет заменять случайные величины, сходящиеся к константе, на саму константу при вычислении предельного распределения.
@@ -60,20 +60,22 @@ g(\xi_n) \xrightarrow{P} g(\xi) \quad \text{(соотв. п.н., соотв. } d
 
 Пусть $\sqrt{n}(\hat{\theta}_n - \theta) \xrightarrow{d} \mathcal{N}(0, \sigma^2)$, и $g$ — дифференцируемая функция с $g'(\theta) \neq 0$. Тогда
 \[
-\sqrt{n}(g(\hat{\theta}_n) - g(\theta)) \xrightarrow{d} \mathcal{N}(0, \sigma^2 (g'(\theta))^2).
+  \sqrt{n}(g(\hat{\theta}_n) - g(\theta)) \xrightarrow{d} \mathcal{N}(0, \sigma^2 (g'(\theta))^2).
 \]
 
 \Proof (идея)
 
 По формуле Тейлора: $g(\hat{\theta}_n) - g(\theta) \approx g'(\theta)(\hat{\theta}_n - \theta)$.
 
-Тогда $\sqrt{n}(g(\hat{\theta}_n) - g(\theta)) \approx g'(\theta) \cdot \sqrt{n}(\hat{\theta}_n - \theta) \xrightarrow{d} g'(\theta) \cdot \mathcal{N}(0, \sigma^2) = \mathcal{N}(0, \sigma^2(g'(\theta))^2)$.
+Тогда $\sqrt{n}(g(\hat{\theta}_n) - g(\theta)) \approx g'(\theta) \cdot \sqrt{n}(\hat{\theta}_n - \theta) \xrightarrow{d} g'(\theta) \cdot \mathcal{N}(0, \sigma^2) =
+\mathcal{N}(0, \sigma^2(g'(\theta))^2)$.
 
 \Endproof
 
-\textbf{Многомерный случай.} Если $\sqrt{n}(\hat{\theta}_n - \theta) \xrightarrow{d} \mathcal{N}(0, \Sigma)$ в $\mathbb{R}^k$, и $g: \mathbb{R}^k \to \mathbb{R}^m$ дифференцируема, то
+\textbf{Многомерный случай.} Если $\sqrt{n}(\hat{\theta}_n - \theta) \xrightarrow{d} \mathcal{N}(0, \Sigma)$ в $\mathbb{R}^k$, и $g: \mathbb{R}^k \to \mathbb{R}^m$
+дифференцируема, то
 \[
-\sqrt{n}(g(\hat{\theta}_n) - g(\theta)) \xrightarrow{d} \mathcal{N}(0, J_g(\theta) \cdot \Sigma \cdot J_g(\theta)^T),
+  \sqrt{n}(g(\hat{\theta}_n) - g(\theta)) \xrightarrow{d} \mathcal{N}(0, J_g(\theta) \cdot \Sigma \cdot J_g(\theta)^T),
 \]
 где $J_g(\theta)$ — матрица Якоби функции $g$ в точке $\theta$.
 
@@ -81,9 +83,10 @@ g(\xi_n) \xrightarrow{P} g(\xi) \quad \text{(соотв. п.н., соотв. } d
 
 \Theor{Многомерная центральная предельная теорема}
 
-Пусть $X_1, X_2, \ldots$ — независимые одинаково распределённые случайные векторы в $\mathbb{R}^k$ с $\mathbb{E}X_1 = \mu$ и конечной ковариационной матрицей $\Sigma = \text{cov}(X_1)$. Тогда
+Пусть $X_1, X_2, \ldots$ — независимые одинаково распределённые случайные векторы в $\mathbb{R}^k$ с $\mathbb{E}X_1 = \mu$ и конечной ковариационной матрицей $\Sigma =
+\text{cov}(X_1)$. Тогда
 \[
-\sqrt{n}(\overline{X}_n - \mu) \xrightarrow{d} \mathcal{N}(0, \Sigma).
+  \sqrt{n}(\overline{X}_n - \mu) \xrightarrow{d} \mathcal{N}(0, \Sigma).
 \]
 
 \textbf{Состоятельность и асимптотическая нормальность}
@@ -94,8 +97,7 @@ g(\xi_n) \xrightarrow{P} g(\xi) \quad \text{(соотв. п.н., соотв. } d
 
 \Def Оценка $\hat{\theta}_n$ называется \textit{асимптотически нормальной} с асимптотической дисперсией $\sigma^2(\theta)$, если
 \[
-\sqrt{n}(\hat{\theta}_n - \theta) \xrightarrow{d_\theta} \mathcal{N}(0, \sigma^2(\theta)).
+  \sqrt{n}(\hat{\theta}_n - \theta) \xrightarrow{d_\theta} \mathcal{N}(0, \sigma^2(\theta)).
 \]
 
 \textbf{Замечание.} Асимптотическая нормальность влечёт состоятельность (но не наоборот).
-
