--- a/olymp.sty
+++ b/olymp.sty
@@ -7,7 +7,7 @@
 %
 %
 % This is work in progress, please do not try to modify it.
-% 
+%
 % Visit http://neerc.ifmo.ru/develop/olymp-sty/index.html for
 % project details.
 %
@@ -19,85 +19,84 @@
 \newif\if@arabic\@arabicfalse
 
 \DeclareOption{landscape}{
-    \@landscapetrue
+  \@landscapetrue
 }
 \DeclareOption{russian}{
-    \@russiantrue
+  \@russiantrue
 }
 \DeclareOption{arabic}{
-    \@arabictrue
+  \@arabictrue
 }
 \ProcessOptions\relax
 
-
 % -- Setup margins --
 %
-% Tex defines to large margins for our purposes. 
+% Tex defines to large margins for our purposes.
 % So we redefine this to use paper more efficiently
 %
 
 \newlength{\thelinewidth}
 
 \if@landscape
-    \if@twocolumn
-    \else
-        \error Landscape is only supported for two column mode
-    \fi
-
-    \ifcase\@ptsize % 10 pt
-        \hoffset=-15mm
-        \voffset=-35mm
-        \textheight=165mm
-        \textwidth=272mm
-    \or % 11 pt
-        \hoffset=-13mm
-        \voffset=-35mm
-        \textheight=165mm
-        \textwidth=272mm
-    \or % 12 pt
-        \hoffset=-12mm
-        \voffset=-35mm
-        \textheight=162mm
-        \textwidth=268mm
-    \fi
+\if@twocolumn
 \else
-    \ifcase\@ptsize % 10 pt
-        \hoffset=-26.5mm
-        \voffset=-35mm
-        \textheight=250mm
-        \textwidth=175mm
-    \or % 11 pt
-        \hoffset=-25mm
-        \voffset=-35mm
-        \textheight=250mm
-        \textwidth=175mm
-    \or % 12 pt
-        \hoffset=-20mm
-        \voffset=-35mm
-        \textheight=245mm
-        \textwidth=175mm
-    \fi
+\error Landscape is only supported for two column mode
+\fi
 
-    \if@twocolumn
-        \hoffset=-14.3mm
-        \voffset=-38mm
-        \textheight=255mm
-        \textwidth=188mm
-    \fi
+\ifcase\@ptsize % 10 pt
+\hoffset=-15mm
+\voffset=-35mm
+\textheight=165mm
+\textwidth=272mm
+\or % 11 pt
+\hoffset=-13mm
+\voffset=-35mm
+\textheight=165mm
+\textwidth=272mm
+\or % 12 pt
+\hoffset=-12mm
+\voffset=-35mm
+\textheight=162mm
+\textwidth=268mm
+\fi
+\else
+\ifcase\@ptsize % 10 pt
+\hoffset=-26.5mm
+\voffset=-35mm
+\textheight=250mm
+\textwidth=175mm
+\or % 11 pt
+\hoffset=-25mm
+\voffset=-35mm
+\textheight=250mm
+\textwidth=175mm
+\or % 12 pt
+\hoffset=-20mm
+\voffset=-35mm
+\textheight=245mm
+\textwidth=175mm
 \fi
 
 \if@twocolumn
-    \thelinewidth=0.47\textwidth
+\hoffset=-14.3mm
+\voffset=-38mm
+\textheight=255mm
+\textwidth=188mm
+\fi
+\fi
+
+\if@twocolumn
+\thelinewidth=0.47\textwidth
 \else
-    \thelinewidth=\textwidth
+\thelinewidth=\textwidth
 \fi
 
 % -- End of setup margins --
 
 %---------- From package "lastpage" ------------------
 \def\lastpage@putlabel{\addtocounter{page}{-1}%
-   \immediate\write\@auxout{\string\newlabel{LastPage}{{}{\thepage}}}%
-   \addtocounter{page}{1}}
+  \immediate\write\@auxout{\string\newlabel{LastPage}{{}{\thepage}}}%
+\addtocounter{page}{1}}
 \AtEndDocument{\clearpage\lastpage@putlabel}%
 %---------- end of "lastpage" ------------------
 
@@ -123,14 +122,14 @@
 \newcommand{\afterproblemsectioncaption}{\smallskip}
 
 \if@twocolumn
-    \afterproblemhead=1mm
-    \afterconstraints=1mm
-    \renewcommand{\problemheadfont}{\large}
-    \renewcommand{\problemsectionfont}{\normalsize}
-    \renewcommand{\problemend}{\par\medskip}
-    \renewcommand{\problemtextfont}{\footnotesize}
-    \renewcommand{\beforeproblemsectioncaption}{\smallbreak\smallskip}
-    \renewcommand{\afterproblemsectioncaption}{}
+\afterproblemhead=1mm
+\afterconstraints=1mm
+\renewcommand{\problemheadfont}{\large}
+\renewcommand{\problemsectionfont}{\normalsize}
+\renewcommand{\problemend}{\par\medskip}
+\renewcommand{\problemtextfont}{\footnotesize}
+\renewcommand{\beforeproblemsectioncaption}{\smallbreak\smallskip}
+\renewcommand{\afterproblemsectioncaption}{}
 \fi
 
 \if@russian\else
@@ -177,45 +176,46 @@
 % -- End of setup keywords --
 
 \newenvironment{examplethree}[1][]{
-    \s@tm@cr@s#1
-    \ttfamily\obeylines\obeyspaces\frenchspacing
-    \newcommand{\exmp}[3]{
-        \begin{minipage}[t]{\exmpthreewidinf}\rightskip=0pt plus 1fill\relax##1\medskip\end{minipage}&
-        \begin{minipage}[t]{\exmpthreewidouf}\rightskip=0pt plus 1fill\relax##2\medskip\end{minipage}&
-        \begin{minipage}[t]{\exmpthreewidnote}\rightskip=0pt plus 1fill\relax##3\medskip\end{minipage}\\
-        \hline
-    }
+  \s@tm@cr@s#1
+  \ttfamily\obeylines\obeyspaces\frenchspacing
+  \newcommand{\exmp}[3]{
+    \begin{minipage}[t]{\exmpthreewidinf}\rightskip=0pt plus 1fill\relax##1\medskip
+    \end{minipage}&
+    \begin{minipage}[t]{\exmpthreewidouf}\rightskip=0pt plus 1fill\relax##2\medskip
+    \end{minipage}&
+    \begin{minipage}[t]{\exmpthreewidnote}\rightskip=0pt plus 1fill\relax##3\medskip
+    \end{minipage}\\
+    \hline
+  }
 
-    \newcommand{\exmpfile}[3]{
-       \exmp{
-          \verbatiminput{##1}
-       }{
-          \verbatiminput{##2}
-       }{
-          ##3
-       }%
-    }
+  \newcommand{\exmpfile}[3]{
+    \exmp{
+      \verbatiminput{##1}
+    }{
+      \verbatiminput{##2}
+    }{
+      ##3
+    }%
+  }
 
-
-    \begin{tabular}{|l|l|l|}
-        \hline
-        \multicolumn{1}{|c|}{\bf\texttt{\InputFileName}}&
-        \multicolumn{1}{|c|}{\bf\texttt{\OutputFileName}}&
-        \multicolumn{1}{|c|}{\bf\texttt{\expandafter\unexpanded{\expandafter\kwExampleNotes}}}\\
-        \hline
-}{
-    \end{tabular}
+  \begin{tabular}{|l|l|l|}
+    \hline
+    \multicolumn{1}{|c|}{\bf\texttt{\InputFileName}}&
+    \multicolumn{1}{|c|}{\bf\texttt{\OutputFileName}}&
+    \multicolumn{1}{|c|}{\bf\texttt{\expandafter\unexpanded{\expandafter\kwExampleNotes}}}\\
+    \hline
+  }{
+  \end{tabular}
 }
-
 
 % -- Problem sections --
 
 \newcommand{\createsection}{\@newsection}
 
 \def\@newsection#1#2{\DeclareRobustCommand{#1}{
-{\beforeproblemsectioncaption\noindent\bf\problemsectionfont
-\textsf{#2}}
-\nopagebreak\par\afterproblemsectioncaption}
+    {\beforeproblemsectioncaption\noindent\bf\problemsectionfont
+    \textsf{#2}}
+  \nopagebreak\par\afterproblemsectioncaption}
 }
 
 \createsection{\InputFile}{\kw@Input}
@@ -242,101 +242,104 @@
 
 \newenvironment{problem}[5]{
 
-% -- Default memory limit --
-% :FIXME:
-\def\@t{#5}
+  % -- Default memory limit --
+  % :FIXME:
+  \def\@t{#5}
 
-\ifx\@t\empty
-    \def\@memorylimit{\defaultmemorylimit}
-\else
-\ifcat\par\@t
-    \def\@memorylimit{\defaultmemorylimit}
-\else
-    \def\@memorylimit{#5}
-\fi
-\fi
-% -- End of default memory limit --
+  \ifx\@t\empty
+  \def\@memorylimit{\defaultmemorylimit}
+  \else
+  \ifcat\par\@t
+  \def\@memorylimit{\defaultmemorylimit}
+  \else
+  \def\@memorylimit{#5}
+  \fi
+  \fi
+  % -- End of default memory limit --
 
-    {
-        \noindent
-        \refstepcounter{problem}
-        \textbf{\problemheadfont\textsf{\kw@Problem\ \if@arabic\arabic{problem}.\else\Alph{problem}.\fi\ #1}}
-        \nopagebreak
-        \par\vspace{\afterproblemhead}
-        \problemtextfont\parindent=6.5mm
-        \vbox{
-            \begin{tabular}{l@{\extracolsep{1cm}}l}
-            \kw@InputFileName & \texttt{#2} \\
-            \kw@OutputFileName & \texttt{#3} \\
-            \kw@TimeLimit & #4 \\
-            \kw@MemoryLimit & \@memorylimit \\
-            \end{tabular}
-        }
-        \nopagebreak
-        \par\vspace{\afterconstraints}
+  {
+    \noindent
+    \refstepcounter{problem}
+    \textbf{\problemheadfont\textsf{\kw@Problem\ \if@arabic\arabic{problem}.\else\Alph{problem}.\fi\ #1}}
+    \nopagebreak
+    \par\vspace{\afterproblemhead}
+    \problemtextfont\parindent=6.5mm
+    \vbox{
+      \begin{tabular}{l@{\extracolsep{1cm}}l}
+        \kw@InputFileName & \texttt{#2} \\
+        \kw@OutputFileName & \texttt{#3} \\
+        \kw@TimeLimit & #4 \\
+        \kw@MemoryLimit & \@memorylimit \\
+      \end{tabular}
     }
-    \problemtextfont
+    \nopagebreak
+    \par\vspace{\afterconstraints}
+  }
+  \problemtextfont
 
-    \newcommand{\InputFileName}{#2}
-    \newcommand{\OutputFileName}{#3}
+  \newcommand{\InputFileName}{#2}
+  \newcommand{\OutputFileName}{#3}
 }{
-    \problemend
+  \problemend
 }
 
 \def\s@tm@cr@s{
-    \def\widthin##1{\exmpwidinf=##1\relax}
-    \def\widthout##1{\exmpwidouf=##1\relax}
-    \def\stretchin##1{\advance\exmpwidinf by ##1\relax}
-    \def\stretchout##1{\advance\exmpwidouf by ##1\relax}
-    \@ifstar{
-        \error Star must not be used in example environment any more
-    }
+  \def\widthin##1{\exmpwidinf=##1\relax}
+  \def\widthout##1{\exmpwidouf=##1\relax}
+  \def\stretchin##1{\advance\exmpwidinf by ##1\relax}
+  \def\stretchout##1{\advance\exmpwidouf by ##1\relax}
+  \@ifstar{
+    \error Star must not be used in example environment any more
+  }
 }
 
 % :FIXME:
 \newenvironment{example}[1][]{
-    \s@tm@cr@s#1
-    \ttfamily\obeylines\obeyspaces\frenchspacing
-    \newcommand{\exmp}[2]{
-        \begin{minipage}[t]{\exmpwidinf}\rightskip=0pt plus 1fill\relax##1\medskip\end{minipage}&
-        \begin{minipage}[t]{\exmpwidouf}\rightskip=0pt plus 1fill\relax##2\medskip\end{minipage}\\
-        \hline
-    }
+  \s@tm@cr@s#1
+  \ttfamily\obeylines\obeyspaces\frenchspacing
+  \newcommand{\exmp}[2]{
+    \begin{minipage}[t]{\exmpwidinf}\rightskip=0pt plus 1fill\relax##1\medskip
+    \end{minipage}&
+    \begin{minipage}[t]{\exmpwidouf}\rightskip=0pt plus 1fill\relax##2\medskip
+    \end{minipage}\\
+    \hline
+  }
 
-    \begin{tabular}{|l|l|}
-        \hline
-        \multicolumn{1}{|c|}{\bf\texttt{\InputFileName}}&
-        \multicolumn{1}{|c|}{\bf\texttt{\OutputFileName}}\\
-        \hline
-}{
-    \end{tabular}
+  \begin{tabular}{|l|l|}
+    \hline
+    \multicolumn{1}{|c|}{\bf\texttt{\InputFileName}}&
+    \multicolumn{1}{|c|}{\bf\texttt{\OutputFileName}}\\
+    \hline
+  }{
+  \end{tabular}
 }
 
 \newenvironment{examplewide}[1][]{%
-    \s@tm@cr@s#1
-    \ttfamily\obeylines\obeyspaces\frenchspacing
-    \newcommand{\exmp}[2]{
-        \begin{tabular}{|c|}
-        \hline
-        \multicolumn{1}{|c|}{\bf\texttt{\InputFileName}}\\
-        \hline
-        \begin{minipage}[t]{\exmpwidewid}\rightskip=0pt plus 1fill\relax
+  \s@tm@cr@s#1
+  \ttfamily\obeylines\obeyspaces\frenchspacing
+  \newcommand{\exmp}[2]{
+    \begin{tabular}{|c|}
+      \hline
+      \multicolumn{1}{|c|}{\bf\texttt{\InputFileName}}\\
+      \hline
+      \begin{minipage}[t]{\exmpwidewid}\rightskip=0pt plus 1fill\relax
         ##1
-        \medskip\end{minipage}\\
-        \hline
-        \multicolumn{1}{|c|}{\bf\texttt{\OutputFileName}}\\%
-        \hline
-        \begin{minipage}[t]{\exmpwidewid}\rightskip=0pt plus 1fill\relax
-        ##2    
-        \medskip\end{minipage}\\%
-        \hline
-        \end{tabular}
-    }
+        \medskip
+      \end{minipage}\\
+      \hline
+      \multicolumn{1}{|c|}{\bf\texttt{\OutputFileName}}\\%
+      \hline
+      \begin{minipage}[t]{\exmpwidewid}\rightskip=0pt plus 1fill\relax
+        ##2
+        \medskip
+      \end{minipage}\\%
+      \hline
+    \end{tabular}
+  }
 }{
 }
 
 % -- End of problem environment --
-
 
 % -- Declare "shortitems" environment: it's a "compact itemize" --
 \def\shortitems{\vspace{-3mmplus2mm}\itemize\itemsep-1.618mmplus0.5mm\relax}%
@@ -350,34 +353,33 @@
 \DeclareRobustCommand{\contestname}{\thecontestname\par\thecontestlocation\unskip, \thecontestdate}
 
 \DeclareRobustCommand{\contest}[3]{
-    \renewcommand{\thecontestname}{#1}
-    \renewcommand{\thecontestlocation}{#2}
-    \renewcommand{\thecontestdate}{#3}
+  \renewcommand{\thecontestname}{#1}
+  \renewcommand{\thecontestlocation}{#2}
+  \renewcommand{\thecontestdate}{#3}
 }
 
 \makeatletter
 
 \fancypagestyle{firstpagestyle}
 {
-	\fancyhf{}
-	\chead{\contestname}
+  \fancyhf{}
+  \chead{\contestname}
 }
 
 \renewcommand{\@oddfoot}{
-    \parbox{\textwidth}{
-        \hrule
-        \vspace{6pt}
-        \sffamily
-        {{\hfil}\kw@page\ \thepage\ \kw@of\ \pageref{LastPage}\hfil}%
-    }
+  \parbox{\textwidth}{
+    \hrule
+    \vspace{6pt}
+    \sffamily
+    {{\hfil}\kw@page\ \thepage\ \kw@of\ \pageref{LastPage}\hfil}%
+  }
 }
 
 \makeatother
- 
+
 \headheight=2cm
 \headsep=6mm
 
 \hfuzz=0.5pt
 
 \sloppy
-
