--- a/problems/comb.tex
+++ b/problems/comb.tex
@@ -10,9 +10,9 @@
 
 8-значное число с нестрого убывающими цифрами — это последовательность $(d_1, d_2, \ldots, d_8)$, где:
 \begin{itemize}
-    \item $d_1 \in \{1, 2, \ldots, 9\}$ (первая цифра не может быть 0);
-    \item $d_i \in \{0, 1, \ldots, 9\}$ для $i \geq 2$;
-    \item $d_1 \geq d_2 \geq \ldots \geq d_8$.
+  \item $d_1 \in \{1, 2, \ldots, 9\}$ (первая цифра не может быть 0);
+  \item $d_i \in \{0, 1, \ldots, 9\}$ для $i \geq 2$;
+  \item $d_1 \geq d_2 \geq \ldots \geq d_8$.
 \end{itemize}
 
 Заметим, что каждое такое число однозначно определяется набором цифр (без учёта порядка), поскольку при нестрогом убывании порядок цифр восстанавливается однозначно.
@@ -21,12 +21,13 @@
 
 Общее число способов выбрать 8 цифр с повторениями из множества $\{0, 1, \ldots, 9\}$ (10 элементов):
 \[
-C_{10 + 8 - 1}^{8} = C_{17}^{8}.
+  C_{10 + 8 - 1}^{8} = C_{17}^{8}.
 \]
 
 Это формула для сочетаний с повторениями: выбираем 8 элементов из 10 с возможностью повторений.
 
-Заметим, что из-за условия $d_1 \ge d_2 \ge \dots \ge d_8$ первая цифра $d_1$ равна максимуму среди выбранных цифр. Поэтому требование «первая цифра ненулевая» эквивалентно требованию «не все 8 цифр равны нулю».
+Заметим, что из-за условия $d_1 \ge d_2 \ge \dots \ge d_8$ первая цифра $d_1$ равна максимуму среди выбранных цифр. Поэтому требование «первая цифра ненулевая»
+эквивалентно требованию «не все 8 цифр равны нулю».
 
 Остаётся исключить единственный набор из восьми нулей (число $00000000$ не является 8-значным). Таких случаев ровно 1, поэтому ответ равен $C_{17}^{8} - 1$.
 
