--- a/problems/differential.tex
+++ b/problems/differential.tex
@@ -1,12 +1,11 @@
 \subsection{Дифференциальные уравнения}
 
-
 \subsubsection{Уравнения с разделяющимися переменными}
 
 \textbf{Общий вид}
 
 \begin{equation*}
-    \frac{dy}{dx} = f(x)g(y)
+  \frac{dy}{dx} = f(x)g(y)
 \end{equation*}
 
 \textbf{Примеры}
@@ -14,16 +13,16 @@
 Решить уравнение:
 
 \begin{equation*}
-    \frac{dy}{dx} = y \sin x
+  \frac{dy}{dx} = y \sin x
 \end{equation*}
 
 Решение:
 
 \begin{align*}
-    \frac{dy}{y} &= \sin x \, dx \\
-    \int \frac{1}{y} \, dy &= \int \sin x \, dx \\
-    \ln |y| &= -\cos x + C \\
-    y &= (\pm e^{C}) e^{-\cos x} = C_1 e^{-\cos x}
+  \frac{dy}{y} &= \sin x \, dx \\
+  \int \frac{1}{y} \, dy &= \int \sin x \, dx \\
+  \ln |y| &= -\cos x + C \\
+  y &= (\pm e^{C}) e^{-\cos x} = C_1 e^{-\cos x}
 \end{align*}
 
 \subsubsection{Однородные уравнения 1-го порядка}
@@ -31,7 +30,7 @@
 \textbf{Общий вид}
 
 \begin{equation*}
-    \frac{dy}{dx} = F\left(\frac{y}{x}\right)
+  \frac{dy}{dx} = F\left(\frac{y}{x}\right)
 \end{equation*}
 
 \textbf{Примеры}
@@ -39,25 +38,25 @@
 Решить уравнение:
 
 \begin{equation*}
-    \frac{dy}{dx} = \frac{x+y}{x}
+  \frac{dy}{dx} = \frac{x+y}{x}
 \end{equation*}
 
 Решение:
 
 \begin{align*}
-    \frac{dy}{dx} &= \frac{x + y}{x} \\
-    \text{Замена: } y = vx \quad &\Rightarrow \quad \frac{dy}{dx} = v + x\frac{dv}{dx} \\
-    v + x \frac{dv}{dx} &= \frac{x + vx}{x} = 1 + v \\
-    x \frac{dv}{dx} &= 1 + v - v = 1 \\
-    \frac{dv}{dx} &= \frac{1}{x} \\
+  \frac{dy}{dx} &= \frac{x + y}{x} \\
+  \text{Замена: } y = vx \quad &\Rightarrow \quad \frac{dy}{dx} = v + x\frac{dv}{dx} \\
+  v + x \frac{dv}{dx} &= \frac{x + vx}{x} = 1 + v \\
+  x \frac{dv}{dx} &= 1 + v - v = 1 \\
+  \frac{dv}{dx} &= \frac{1}{x} \\
 \end{align*}
 
 Свели к уравнению с разделяющимися:
 
 \begin{align*}
-    \int dv &= \int \frac{1}{x} dx \\
-    v &= \ln|x| + C \\
-    y &= vx = x(\ln|x| + C)
+  \int dv &= \int \frac{1}{x} dx \\
+  v &= \ln|x| + C \\
+  y &= vx = x(\ln|x| + C)
 \end{align*}
 
 \subsubsection{Уравнения в полных дифференциалах}
@@ -65,7 +64,7 @@
 \textbf{Общий вид}
 
 \begin{equation*}
-    M(x,y)dx + N(x,y)dy = 0
+  M(x,y)dx + N(x,y)dy = 0
 \end{equation*}
 
 где \(\frac{\partial M}{\partial y} = \frac{\partial N}{\partial x}\) — условие полной дифференциальности.
@@ -75,7 +74,7 @@
 Решить уравнение:
 
 \begin{equation*}
-(2xy + 1)dx + (x^2 + 3y^2)dy = 0
+  (2xy + 1)dx + (x^2 + 3y^2)dy = 0
 \end{equation*}
 
 Решение:
@@ -83,8 +82,8 @@
 Проверим условие полной дифференциальности:
 
 \begin{align*}
-    \frac{\partial M}{\partial y} &= \frac{\partial}{\partial y}(2xy + 1) = 2x \\
-    \frac{\partial N}{\partial x} &= \frac{\partial}{\partial x}(x^2 + 3y^2) = 2x
+  \frac{\partial M}{\partial y} &= \frac{\partial}{\partial y}(2xy + 1) = 2x \\
+  \frac{\partial N}{\partial x} &= \frac{\partial}{\partial x}(x^2 + 3y^2) = 2x
 \end{align*}
 
 Условие выполнено, уравнение полное.
@@ -92,15 +91,15 @@
 Ищем функцию $F(x,y)$, такую что $\frac{\partial F}{\partial x} = M; \frac{\partial F}{\partial y} = N$.
 
 \begin{align*}
-    \begin{cases}
-        \frac{\partial F}{\partial x} &= 2xy + 1 \quad \Rightarrow \quad F(x,y) = x^2 y + x + \phi(y) \\
-        \\
-        \frac{\partial F}{\partial y} &= x^2 + 3y^2 \quad \Rightarrow \quad \frac{\partial}{\partial y}(x^2 y + x + \phi(y)) = x^2 + \phi'(y) = x^2 + 3y^2 \\
-    \end{cases}
+  \begin{cases}
+    \frac{\partial F}{\partial x} &= 2xy + 1 \quad \Rightarrow \quad F(x,y) = x^2 y + x + \phi(y) \\
+    \\
+    \frac{\partial F}{\partial y} &= x^2 + 3y^2 \quad \Rightarrow \quad \frac{\partial}{\partial y}(x^2 y + x + \phi(y)) = x^2 + \phi'(y) = x^2 + 3y^2 \\
+  \end{cases}
 \end{align*}
 
 \begin{align*}
-    \phi'(y) &= 3y^2 \quad \Rightarrow \quad \phi(y) = y^3\\
+  \phi'(y) &= 3y^2 \quad \Rightarrow \quad \phi(y) = y^3\\
 \end{align*}
 
 Следовательно, $F(x,y) = x^2 y + x + y^3$.
@@ -112,7 +111,7 @@
 \textbf{Общий вид}
 
 \begin{equation*}
-    \frac{dy}{dx} + P(x)y = Q(x)
+  \frac{dy}{dx} + P(x)y = Q(x)
 \end{equation*}
 
 \textbf{Примеры}
@@ -120,33 +119,33 @@
 Решить уравнение:
 
 \begin{equation*}
-    y' + y = e^x
+  y' + y = e^x
 \end{equation*}
 
 Найти интегрирующий множитель -- такую функцию, при умножении уравнения на которую левая часть станет полной производной:
 
 \begin{equation*}
-    \frac{d}{dx} [\mu(x)y] = \mu(x) Q(x)
+  \frac{d}{dx} [\mu(x)y] = \mu(x) Q(x)
 \end{equation*}
 
 Для данного уравнения интегрирующий множитель $e^x$:
 
 \begin{align*}
-    e^x \frac{dy}{dx} + e^x y &= e^{2x} \\
-    \frac{d}{dx}(y e^x) &= e^{2x}
+  e^x \frac{dy}{dx} + e^x y &= e^{2x} \\
+  \frac{d}{dx}(y e^x) &= e^{2x}
 \end{align*}
 
 Интегрируем обе части:
 
 \begin{align*}
-    \int \frac{d}{dx}(y e^x) dx &= \int e^{2x} dx \\
-    y e^x &= \frac{1}{2} e^{2x} + C
+  \int \frac{d}{dx}(y e^x) dx &= \int e^{2x} dx \\
+  y e^x &= \frac{1}{2} e^{2x} + C
 \end{align*}
 
 Выражаем $y$:
 
 \begin{align*}
-    y &= \frac{1}{2} e^x + C e^{-x}
+  y &= \frac{1}{2} e^x + C e^{-x}
 \end{align*}
 
 \subsubsection{Линейные уравнения второго порядка с постоянными коэффициентами}
@@ -154,7 +153,7 @@
 \textbf{Общий вид}
 
 \begin{equation*}
-    y'' + a y' + b y = f(x)
+  y'' + a y' + b y = f(x)
 \end{equation*}
 
 \textbf{Пример}
@@ -162,22 +161,22 @@
 Решить уравнение:
 
 \begin{equation*}
-    y'' - 3y' + 2y = e^{2x}
+  y'' - 3y' + 2y = e^{2x}
 \end{equation*}
 
 Решаем однородное уравнение:
 
 \begin{align*}
-    y_h'' - 3y_h' + 2y_h &= 0 \\ \\
-    r^2 - 3r + 2 &= 0 \\
-    r_1 = 1, &\quad r_2 = 2 \\
-    y_h = C_1 e^x &+ C_2 e^{2x}
+  y_h'' - 3y_h' + 2y_h &= 0 \\ \\
+  r^2 - 3r + 2 &= 0 \\
+  r_1 = 1, &\quad r_2 = 2 \\
+  y_h = C_1 e^x &+ C_2 e^{2x}
 \end{align*}
 
 Ищем частное решение в виде:
 
 \begin{equation*}
-    y_p = u_1(x) e^x + u_2(x) e^{2x}
+  y_p = u_1(x) e^x + u_2(x) e^{2x}
 \end{equation*}
 
 где \(u_1(x)\) и \(u_2(x)\) — функции, которые нужно определить.
@@ -185,30 +184,30 @@
 Составляем систему для \(u_1'\) и \(u_2'\):
 
 \begin{align*}
-    u_1' e^x + u_2' e^{2x} &= 0 \\
-    u_1' e^x + 2 u_2' e^{2x} &= e^{2x}
+  u_1' e^x + u_2' e^{2x} &= 0 \\
+  u_1' e^x + 2 u_2' e^{2x} &= e^{2x}
 \end{align*}
 
 Решение системы:
 
 \begin{align*}
-    u_2' &= 1 \quad \Rightarrow \quad u_2 = \int 1 dx = x \\
-    u_1' &= - u_2' e^x = - e^x \quad \Rightarrow \quad u_1 = \int - e^x dx = - e^x
+  u_2' &= 1 \quad \Rightarrow \quad u_2 = \int 1 dx = x \\
+  u_1' &= - u_2' e^x = - e^x \quad \Rightarrow \quad u_1 = \int - e^x dx = - e^x
 \end{align*}
 
 Итак: частное решение
 
 \begin{align*}
-    y_p &= u_1 e^x + u_2 e^{2x} \\
-    y_p &= (- e^x) e^x + x e^{2x} \\
-    y_p &= - e^{2x} + x e^{2x} = (x-1) e^{2x}
+  y_p &= u_1 e^x + u_2 e^{2x} \\
+  y_p &= (- e^x) e^x + x e^{2x} \\
+  y_p &= - e^{2x} + x e^{2x} = (x-1) e^{2x}
 \end{align*}
 
 Общее решение:
 
 \begin{align*}
-    y &= y_h + y_p \\
-    y &= C_1 e^x + C_2 e^{2x} + (x-1) e^{2x}
+  y &= y_h + y_p \\
+  y &= C_1 e^x + C_2 e^{2x} + (x-1) e^{2x}
 \end{align*}
 
 (Можно переписать как $y = C_1 e^x + C_3 e^{2x} + xe^{2x}$)
@@ -218,22 +217,22 @@
 Решить уравнение:
 
 \begin{equation*}
-    y''' - 6y'' + 12y' - 8y = 0
+  y''' - 6y'' + 12y' - 8y = 0
 \end{equation*}
 
 Характеристическое уравнение:
 
 \begin{align*}
-    r^3 - 6r^2 + 12r - 8 &= 0 \\
-    (r - 2)^3 &= 0 \\
-    r_1 = r_2 = r_3 &= 2
+  r^3 - 6r^2 + 12r - 8 &= 0 \\
+  (r - 2)^3 &= 0 \\
+  r_1 = r_2 = r_3 &= 2
 \end{align*}
 
 Общее решение:
 
 \begin{align*}
-    y_h &= (C_1 + C_2 x + C_3 x^2) e^{r x} \\
-    y_h &= (C_1 + C_2 x + C_3 x^2) e^{2x}
+  y_h &= (C_1 + C_2 x + C_3 x^2) e^{r x} \\
+  y_h &= (C_1 + C_2 x + C_3 x^2) e^{2x}
 \end{align*}
 
 \subsubsection{Система линейных дифференциальных уравнений}
@@ -241,11 +240,11 @@
 Решить систему:
 
 \begin{equation*}
-    \begin{cases}
-        x'(t) = 2x + y \\
-        y'(t) = x + 2y + z \\
-        z'(t) = y + 2z
-    \end{cases}
+  \begin{cases}
+    x'(t) = 2x + y \\
+    y'(t) = x + 2y + z \\
+    z'(t) = y + 2z
+  \end{cases}
 \end{equation*}
 
 \textbf{Решение}
@@ -253,64 +252,76 @@
 Сначала записываем систему в матричной форме:
 
 \begin{equation*}
-    \begin{pmatrix} x' \\ y' \\ z' \end{pmatrix} =
-    \begin{pmatrix}
-        2 & 1 & 0 \\
-        1 & 2 & 1 \\
-        0 & 1 & 2
-    \end{pmatrix}
-    \begin{pmatrix} x \\ y \\ z \end{pmatrix}
+  \begin{pmatrix} x' \\ y' \\ z'
+  \end{pmatrix} =
+  \begin{pmatrix}
+    2 & 1 & 0 \\
+    1 & 2 & 1 \\
+    0 & 1 & 2
+  \end{pmatrix}
+  \begin{pmatrix} x \\ y \\ z
+  \end{pmatrix}
 \end{equation*}
 
 Находим собственные значения матрицы \(A\) из характеристического уравнения:
 
 \begin{align*}
-    \det(A - \lambda I) &=
-    \begin{vmatrix}
-        2-\lambda & 1 & 0 \\
-        1 & 2-\lambda & 1 \\
-        0 & 1 & 2-\lambda
-    \end{vmatrix} = 0
+  \det(A - \lambda I) &=
+  \begin{vmatrix}
+    2-\lambda & 1 & 0 \\
+    1 & 2-\lambda & 1 \\
+    0 & 1 & 2-\lambda
+  \end{vmatrix} = 0
 \end{align*}
 
 Вычисляя определитель, получаем:
 
 \begin{equation*}
-(2-\lambda)\big((2-\lambda)^2 - 1\big) - 1\big(1\cdot(2-\lambda) - 1\cdot 0\big) + 0 = 0
+  (2-\lambda)\big((2-\lambda)^2 - 1\big) - 1\big(1\cdot(2-\lambda) - 1\cdot 0\big) + 0 = 0
 \end{equation*}
 
 \begin{equation*}
-(2-\lambda)\big((2-\lambda)^2 - 1\big) - (2-\lambda) = 0
+  (2-\lambda)\big((2-\lambda)^2 - 1\big) - (2-\lambda) = 0
 \end{equation*}
 
 \begin{equation*}
-(2-\lambda)\big((2-\lambda)^2 - 2\big) = 0
+  (2-\lambda)\big((2-\lambda)^2 - 2\big) = 0
 \end{equation*}
 
 Отсюда собственные значения:
 
 \begin{equation*}
-    \lambda_1 = 2-\sqrt{2}, \quad \lambda_2 = 2, \quad \lambda_3 = 2+\sqrt{2}
+  \lambda_1 = 2-\sqrt{2}, \quad \lambda_2 = 2, \quad \lambda_3 = 2+\sqrt{2}
 \end{equation*}
 
 Для каждого собственного значения находим собственный вектор \(v_i\):
 
 \begin{align*}
-    \lambda_1 = 2-\sqrt{2}: & \quad v_1 = \begin{pmatrix} 1 \\ -\sqrt{2} \\ 1 \end{pmatrix} \\
-    \lambda_2 = 2: & \quad v_2 = \begin{pmatrix} 1 \\ 0 \\ -1 \end{pmatrix} \\
-    \lambda_3 = 2+\sqrt{2}: & \quad v_3 = \begin{pmatrix} 1 \\ \sqrt{2} \\ 1 \end{pmatrix}
+  \lambda_1 = 2-\sqrt{2}: & \quad v_1 =
+  \begin{pmatrix} 1 \\ -\sqrt{2} \\ 1
+  \end{pmatrix} \\
+  \lambda_2 = 2: & \quad v_2 =
+  \begin{pmatrix} 1 \\ 0 \\ -1
+  \end{pmatrix} \\
+  \lambda_3 = 2+\sqrt{2}: & \quad v_3 =
+  \begin{pmatrix} 1 \\ \sqrt{2} \\ 1
+  \end{pmatrix}
 \end{align*}
 
 Общее решение системы записывается как линейная комбинация собственных решений:
 
 \begin{equation*}
-    \begin{pmatrix} x(t) \\ y(t) \\ z(t) \end{pmatrix} =
-    C_1
-    \begin{pmatrix} 1 \\ -\sqrt{2} \\ 1 \end{pmatrix} e^{(2-\sqrt{2})t} +
-    C_2
-    \begin{pmatrix} 1 \\ 0 \\ -1 \end{pmatrix} e^{2t} +
-    C_3
-    \begin{pmatrix} 1 \\ \sqrt{2} \\ 1 \end{pmatrix} e^{(2+\sqrt{2})t}
+  \begin{pmatrix} x(t) \\ y(t) \\ z(t)
+  \end{pmatrix} =
+  C_1
+  \begin{pmatrix} 1 \\ -\sqrt{2} \\ 1
+  \end{pmatrix} e^{(2-\sqrt{2})t} +
+  C_2
+  \begin{pmatrix} 1 \\ 0 \\ -1
+  \end{pmatrix} e^{2t} +
+  C_3
+  \begin{pmatrix} 1 \\ \sqrt{2} \\ 1
+  \end{pmatrix} e^{(2+\sqrt{2})t}
 \end{equation*}
 
 где \(C_1, C_2, C_3\) — произвольные константы.
@@ -320,10 +331,10 @@
 Решить систему:
 
 \begin{equation*}
-    \begin{cases}
-        x'(t) = -y \\
-        y'(t) = x
-    \end{cases}
+  \begin{cases}
+    x'(t) = -y \\
+    y'(t) = x
+  \end{cases}
 \end{equation*}
 
 Решение:
@@ -331,39 +342,48 @@
 Сначала записываем систему в матричной форме:
 
 \begin{equation*}
-    \begin{pmatrix} x' \\ y' \end{pmatrix} =
-    \begin{pmatrix}
-        0 & -1 \\
-        1 & 0
-    \end{pmatrix}
-    \begin{pmatrix} x \\ y \end{pmatrix}
+  \begin{pmatrix} x' \\ y'
+  \end{pmatrix} =
+  \begin{pmatrix}
+    0 & -1 \\
+    1 & 0
+  \end{pmatrix}
+  \begin{pmatrix} x \\ y
+  \end{pmatrix}
 \end{equation*}
 
 Находим собственные значения матрицы \(A\):
 
 \begin{align*}
-    \det(A - \lambda I) &=
-    \begin{vmatrix}
-        -\lambda & -1 \\
-        1 & -\lambda
-    \end{vmatrix} = \lambda^2 + 1 = 0
+  \det(A - \lambda I) &=
+  \begin{vmatrix}
+    -\lambda & -1 \\
+    1 & -\lambda
+  \end{vmatrix} = \lambda^2 + 1 = 0
 \end{align*}
 
 Отсюда:
 
 \begin{equation*}
-    \lambda_{1,2} = \pm i
+  \lambda_{1,2} = \pm i
 \end{equation*}
 
-Для \(\lambda = i\) находим собственный вектор \(v_1 = \begin{pmatrix} 1 \\ -i \end{pmatrix}\), для \(\lambda = -i\) — \(v_2 = \begin{pmatrix} 1 \\ i \end{pmatrix}\).
+Для \(\lambda = i\) находим собственный вектор \(v_1 =
+  \begin{pmatrix} 1 \\ -i
+\end{pmatrix}\), для \(\lambda = -i\) — \(v_2 =
+  \begin{pmatrix} 1 \\ i
+\end{pmatrix}\).
 
 Общее комплексное решение:
 
 \begin{equation*}
-    \begin{pmatrix} x(t) \\ y(t) \end{pmatrix} = C_1
-    \begin{pmatrix} 1 \\ -i \end{pmatrix} e^{i t} +
-    C_2
-    \begin{pmatrix} 1 \\ i \end{pmatrix} e^{-i t}
+  \begin{pmatrix} x(t) \\ y(t)
+  \end{pmatrix} = C_1
+  \begin{pmatrix} 1 \\ -i
+  \end{pmatrix} e^{i t} +
+  C_2
+  \begin{pmatrix} 1 \\ i
+  \end{pmatrix} e^{-i t}
 \end{equation*}
 
 Овеществление решения:
@@ -371,25 +391,31 @@
 Используем формулу Эйлера \(e^{i t} = \cos t + i \sin t\) и разложим комплексные экспоненты:
 
 \begin{align*}
-    C_1
-    \begin{pmatrix} 1 \\ -i \end{pmatrix} e^{i t} +
-    C_2
-    \begin{pmatrix} 1 \\ i \end{pmatrix} e^{-i t}
-    &= C_1
-    \begin{pmatrix} 1 \\ -i \end{pmatrix} (\cos t + i \sin t) +
-    C_2
-    \begin{pmatrix} 1 \\ i \end{pmatrix} (\cos t - i \sin t) \\
-    &= (C_1 + C_2)
-    \begin{pmatrix} \cos t \\ \sin t \end{pmatrix} +
-    i(C_1 - C_2)
-    \begin{pmatrix} \sin t \\ -\cos t \end{pmatrix}
+  C_1
+  \begin{pmatrix} 1 \\ -i
+  \end{pmatrix} e^{i t} +
+  C_2
+  \begin{pmatrix} 1 \\ i
+  \end{pmatrix} e^{-i t}
+  &= C_1
+  \begin{pmatrix} 1 \\ -i
+  \end{pmatrix} (\cos t + i \sin t) +
+  C_2
+  \begin{pmatrix} 1 \\ i
+  \end{pmatrix} (\cos t - i \sin t) \\
+  &= (C_1 + C_2)
+  \begin{pmatrix} \cos t \\ \sin t
+  \end{pmatrix} +
+  i(C_1 - C_2)
+  \begin{pmatrix} \sin t \\ -\cos t
+  \end{pmatrix}
 \end{align*}
 
 Вводим новые вещественные константы \(A = C_1 + C_2\), \(B = i(C_1 - C_2)\), получаем вещественное решение:
 
 \begin{align*}
-    x(t) &= A \cos t + B \sin t \\
-    y(t) &= A \sin t - B \cos t
+  x(t) &= A \cos t + B \sin t \\
+  y(t) &= A \sin t - B \cos t
 \end{align*}
 
 \subsubsection{Система второго порядка с кратным вещественным корнем}
@@ -397,84 +423,99 @@
 Рассмотрим систему:
 
 \begin{equation*}
-    \begin{cases}
-        x'(t) = 2x + y \\
-        y'(t) = -4x - 2y
-    \end{cases}
+  \begin{cases}
+    x'(t) = 2x + y \\
+    y'(t) = -4x - 2y
+  \end{cases}
 \end{equation*}
 
 Сначала записываем систему в матричной форме:
 
 \begin{equation*}
-    \begin{pmatrix} x' \\ y' \end{pmatrix} =
-    \begin{pmatrix}
-        2 & 1 \\
-        -4 & -2
-    \end{pmatrix}
-    \begin{pmatrix} x \\ y \end{pmatrix}
+  \begin{pmatrix} x' \\ y'
+  \end{pmatrix} =
+  \begin{pmatrix}
+    2 & 1 \\
+    -4 & -2
+  \end{pmatrix}
+  \begin{pmatrix} x \\ y
+  \end{pmatrix}
 \end{equation*}
 
 Находим собственные значения матрицы \(A\):
 
 \begin{align*}
-    \det(A - \lambda I) &=
-    \begin{vmatrix}
-        2-\lambda & 1 \\
-        -4 & -2-\lambda
-    \end{vmatrix}
-    = (2-\lambda)(-2-\lambda) - (-4) = \lambda^2 = 0
+  \det(A - \lambda I) &=
+  \begin{vmatrix}
+    2-\lambda & 1 \\
+    -4 & -2-\lambda
+  \end{vmatrix}
+  = (2-\lambda)(-2-\lambda) - (-4) = \lambda^2 = 0
 \end{align*}
 
 Отсюда:
 
 \begin{equation*}
-    \lambda = 0 \quad \text{(кратность 2)}
+  \lambda = 0 \quad \text{(кратность 2)}
 \end{equation*}
 
 Находим обычный собственный вектор \(v_1\):
 
 \begin{equation*}
-(A - 0 I)v_1 = 0 \quad \Rightarrow \quad v_1 = \begin{pmatrix} 1 \\ -2 \end{pmatrix}
+  (A - 0 I)v_1 = 0 \quad \Rightarrow \quad v_1 =
+  \begin{pmatrix} 1 \\ -2
+  \end{pmatrix}
 \end{equation*}
 
 Так как кратность корня = 2, а собственный вектор один, находим обобщённый собственный вектор \(v_2\):
 
 \begin{equation*}
-(A - 0 I)v_2 = v_1 \quad \Rightarrow \quad v_2 = \begin{pmatrix} 0 \\ 1 \end{pmatrix}
+  (A - 0 I)v_2 = v_1 \quad \Rightarrow \quad v_2 =
+  \begin{pmatrix} 0 \\ 1
+  \end{pmatrix}
 \end{equation*}
 
 Общее решение системы с учётом кратного корня и цепочки обобщённых векторов:
 
 \begin{equation*}
-    \begin{pmatrix} x(t) \\ y(t) \end{pmatrix} =
-    C_1 v_1 + C_2 (v_1 t + v_2)
-    = C_1 \begin{pmatrix} 1 \\ -2 \end{pmatrix} +
-    C_2 \left( t \begin{pmatrix} 1 \\ -2 \end{pmatrix} + \begin{pmatrix} 0 \\ 1 \end{pmatrix} \right)
+  \begin{pmatrix} x(t) \\ y(t)
+  \end{pmatrix} =
+  C_1 v_1 + C_2 (v_1 t + v_2)
+  = C_1
+  \begin{pmatrix} 1 \\ -2
+  \end{pmatrix} +
+  C_2 \left( t
+    \begin{pmatrix} 1 \\ -2
+    \end{pmatrix} +
+    \begin{pmatrix} 0 \\ 1
+  \end{pmatrix} \right)
 \end{equation*}
 
 В раскрытом виде по компонентам:
 
 \begin{align*}
-    x(t) &= C_1 + C_2 t \\
-    y(t) &= -2 C_1 - 2 C_2 t + C_2 = -2 C_1 + C_2 (1 - 2 t)
+  x(t) &= C_1 + C_2 t \\
+  y(t) &= -2 C_1 - 2 C_2 t + C_2 = -2 C_1 + C_2 (1 - 2 t)
 \end{align*}
 
 где \(C_1, C_2\) — произвольные константы.
 
 \Note
-Если система $X' = A X$ имеет вещественный собственный корень \(\lambda\) кратности \(k\), а собственный вектор всего 1, то необходимо строить цепочку обобщённых собственных векторов:
+Если система $X' = A X$ имеет вещественный собственный корень \(\lambda\) кратности \(k\), а собственный вектор всего 1, то необходимо строить цепочку обобщённых
+собственных векторов:
 
 \begin{align*}
-(A - \lambda I)v_1 &= 0, \\
-(A - \lambda I)v_2 &= v_1, \\
-(A - \lambda I)v_3 &= v_2, \\
-&\dots \\
-(A - \lambda I)v_k &= v_{k-1}.
+  (A - \lambda I)v_1 &= 0, \\
+  (A - \lambda I)v_2 &= v_1, \\
+  (A - \lambda I)v_3 &= v_2, \\
+  &\dots \\
+  (A - \lambda I)v_k &= v_{k-1}.
 \end{align*}
 
 Общее решение, соответствующее кратному корню \(\lambda\), имеет вид:
 \begin{equation*}
-    X(t) = \Big(C_1 v_1 + C_2 (v_1 t + v_2) + C_3 \big(v_1 \frac{t^2}{2} + v_2 t + v_3\big) + \dots + C_k \big(v_1 \frac{t^{k-1}}{(k-1)!} + v_2 \frac{t^{k-2}}{(k-2)!} + \dots + v_k\big)\Big) e^{\lambda t},
+  X(t) = \Big(C_1 v_1 + C_2 (v_1 t + v_2) + C_3 \big(v_1 \frac{t^2}{2} + v_2 t + v_3\big) + \dots + C_k \big(v_1 \frac{t^{k-1}}{(k-1)!} + v_2 \frac{t^{k-2}}{(k-2)!} +
+  \dots + v_k\big)\Big) e^{\lambda t},
 \end{equation*}
 где \(C_1, C_2, \dots, C_k\) — произвольные константы.
 
@@ -482,10 +523,10 @@
 
 \textbf{Условие.} Найти все действительные решения системы дифференциальных уравнений
 \[
-\begin{cases}
-\dot{x} = 4x + 3y \\
-\dot{y} = 3x + 4y
-\end{cases}
+  \begin{cases}
+    \dot{x} = 4x + 3y \\
+    \dot{y} = 3x + 4y
+  \end{cases}
 \]
 Найти положение равновесия автономной системы, определить его характер и нарисовать фазовые траектории системы в окрестности положения равновесия.
 
@@ -495,69 +536,84 @@
 
 Записываем систему в матричной форме:
 \[
-\begin{pmatrix} \dot{x} \\ \dot{y} \end{pmatrix} = 
-\begin{pmatrix} 4 & 3 \\ 3 & 4 \end{pmatrix}
-\begin{pmatrix} x \\ y \end{pmatrix}
+  \begin{pmatrix} \dot{x} \\ \dot{y}
+  \end{pmatrix} =
+  \begin{pmatrix} 4 & 3 \\ 3 & 4
+  \end{pmatrix}
+  \begin{pmatrix} x \\ y
+  \end{pmatrix}
 \]
 
 \textit{Шаг 1. Находим собственные значения.}
 
 Характеристическое уравнение:
 \[
-\det(A - \lambda I) = 
-\begin{vmatrix} 4 - \lambda & 3 \\ 3 & 4 - \lambda \end{vmatrix} 
-= (4 - \lambda)^2 - 9 = \lambda^2 - 8\lambda + 16 - 9 = \lambda^2 - 8\lambda + 7 = 0.
+  \det(A - \lambda I) =
+  \begin{vmatrix} 4 - \lambda & 3 \\ 3 & 4 - \lambda
+  \end{vmatrix}
+  = (4 - \lambda)^2 - 9 = \lambda^2 - 8\lambda + 16 - 9 = \lambda^2 - 8\lambda + 7 = 0.
 \]
 
 Корни: $\lambda_{1,2} = \frac{8 \pm \sqrt{64 - 28}}{2} = \frac{8 \pm 6}{2}$.
 
 \[
-\lambda_1 = 7, \quad \lambda_2 = 1.
+  \lambda_1 = 7, \quad \lambda_2 = 1.
 \]
 
 \textit{Шаг 2. Находим собственные векторы.}
 
 Для $\lambda_1 = 7$:
 \[
-(A - 7I)v = 0 \Rightarrow 
-\begin{pmatrix} -3 & 3 \\ 3 & -3 \end{pmatrix} v = 0.
+  (A - 7I)v = 0 \Rightarrow
+  \begin{pmatrix} -3 & 3 \\ 3 & -3
+  \end{pmatrix} v = 0.
 \]
 
 Уравнение: $-3v_1 + 3v_2 = 0 \Rightarrow v_1 = v_2$.
 
-Собственный вектор: $v_1 = \begin{pmatrix} 1 \\ 1 \end{pmatrix}$.
+Собственный вектор: $v_1 =
+\begin{pmatrix} 1 \\ 1
+\end{pmatrix}$.
 
 Для $\lambda_2 = 1$:
 \[
-(A - I)v = 0 \Rightarrow 
-\begin{pmatrix} 3 & 3 \\ 3 & 3 \end{pmatrix} v = 0.
+  (A - I)v = 0 \Rightarrow
+  \begin{pmatrix} 3 & 3 \\ 3 & 3
+  \end{pmatrix} v = 0.
 \]
 
 Уравнение: $3v_1 + 3v_2 = 0 \Rightarrow v_1 = -v_2$.
 
-Собственный вектор: $v_2 = \begin{pmatrix} 1 \\ -1 \end{pmatrix}$.
+Собственный вектор: $v_2 =
+\begin{pmatrix} 1 \\ -1
+\end{pmatrix}$.
 
 \textit{Шаг 3. Записываем общее решение.}
 
 \[
-\begin{pmatrix} x(t) \\ y(t) \end{pmatrix} = 
-C_1 \begin{pmatrix} 1 \\ 1 \end{pmatrix} e^{7t} + 
-C_2 \begin{pmatrix} 1 \\ -1 \end{pmatrix} e^{t}
+  \begin{pmatrix} x(t) \\ y(t)
+  \end{pmatrix} =
+  C_1
+  \begin{pmatrix} 1 \\ 1
+  \end{pmatrix} e^{7t} +
+  C_2
+  \begin{pmatrix} 1 \\ -1
+  \end{pmatrix} e^{t}
 \]
 
 Или в координатной форме:
 \[
-x(t) = C_1 e^{7t} + C_2 e^{t}, \quad y(t) = C_1 e^{7t} - C_2 e^{t}.
+  x(t) = C_1 e^{7t} + C_2 e^{t}, \quad y(t) = C_1 e^{7t} - C_2 e^{t}.
 \]
 
 \textbf{Часть 2. Положение равновесия.}
 
 Положение равновесия — это точка, в которой $\dot{x} = \dot{y} = 0$:
 \[
-\begin{cases}
-4x + 3y = 0 \\
-3x + 4y = 0
-\end{cases}
+  \begin{cases}
+    4x + 3y = 0 \\
+    3x + 4y = 0
+  \end{cases}
 \]
 
 Определитель системы: $\det A = 16 - 9 = 7 \neq 0$, значит единственное решение — $(x, y) = (0, 0)$.
@@ -568,8 +624,8 @@ x(t) = C_1 e^{7t} + C_2 e^{t}, \quad y(t) = C_1 e^{7t} - C_2 e^{t}.
 
 Характер определяется собственными значениями матрицы $A$:
 \begin{itemize}
-    \item $\lambda_1 = 7 > 0$
-    \item $\lambda_2 = 1 > 0$
+  \item $\lambda_1 = 7 > 0$
+  \item $\lambda_2 = 1 > 0$
 \end{itemize}
 
 Оба собственных значения положительные и различные, поэтому положение равновесия — \textbf{неустойчивый узел}.
@@ -578,38 +634,38 @@ x(t) = C_1 e^{7t} + C_2 e^{t}, \quad y(t) = C_1 e^{7t} - C_2 e^{t}.
 
 Введём новые координаты $(\xi, \eta)$ вдоль собственных векторов:
 \[
-\xi = x + y, \quad \eta = x - y.
+  \xi = x + y, \quad \eta = x - y.
 \]
 
 Тогда:
 \[
-\dot{\xi} = \dot{x} + \dot{y} = (4x + 3y) + (3x + 4y) = 7(x + y) = 7\xi,
+  \dot{\xi} = \dot{x} + \dot{y} = (4x + 3y) + (3x + 4y) = 7(x + y) = 7\xi,
 \]
 \[
-\dot{\eta} = \dot{x} - \dot{y} = (4x + 3y) - (3x + 4y) = x - y = \eta.
+  \dot{\eta} = \dot{x} - \dot{y} = (4x + 3y) - (3x + 4y) = x - y = \eta.
 \]
 
 В новых координатах система расцеплена:
 \[
-\dot{\xi} = 7\xi, \quad \dot{\eta} = \eta.
+  \dot{\xi} = 7\xi, \quad \dot{\eta} = \eta.
 \]
 
 Решения: $\xi = \xi_0 e^{7t}$, $\eta = \eta_0 e^{t}$.
 
 Исключаем параметр $t$:
 \[
-t = \ln\left(\frac{\eta}{\eta_0}\right), \quad \xi = \xi_0 e^{7\ln(\eta/\eta_0)} = \xi_0 \left(\frac{\eta}{\eta_0}\right)^7.
+  t = \ln\left(\frac{\eta}{\eta_0}\right), \quad \xi = \xi_0 e^{7\ln(\eta/\eta_0)} = \xi_0 \left(\frac{\eta}{\eta_0}\right)^7.
 \]
 
 \[
-\xi = C \cdot \eta^7, \quad \text{где } C = \frac{\xi_0}{\eta_0^7}.
+  \xi = C \cdot \eta^7, \quad \text{где } C = \frac{\xi_0}{\eta_0^7}.
 \]
 
 \drawsomemedium{pix/problems_15.png}
 
 \textit{Общее решение:}
 \[
-x(t) = C_1 e^{7t} + C_2 e^{t}, \quad y(t) = C_1 e^{7t} - C_2 e^{t}.
+  x(t) = C_1 e^{7t} + C_2 e^{t}, \quad y(t) = C_1 e^{7t} - C_2 e^{t}.
 \]
 
 \textit{Положение равновесия:} $(0, 0)$.
@@ -628,19 +684,19 @@ x(t) = C_1 e^{7t} + C_2 e^{t}, \quad y(t) = C_1 e^{7t} - C_2 e^{t}.
 
 Для линейного однородного ОДУ с постоянными коэффициентами:
 \[
-y^{(n)} + a_{n-1} y^{(n-1)} + \ldots + a_1 y' + a_0 y = 0
+  y^{(n)} + a_{n-1} y^{(n-1)} + \ldots + a_1 y' + a_0 y = 0
 \]
 
 решения определяются корнями характеристического уравнения:
 \[
-\lambda^n + a_{n-1} \lambda^{n-1} + \ldots + a_1 \lambda + a_0 = 0.
+  \lambda^n + a_{n-1} \lambda^{n-1} + \ldots + a_1 \lambda + a_0 = 0.
 \]
 
 \begin{itemize}
-    \item Простому вещественному корню $\lambda$ соответствует решение $e^{\lambda x}$.
-    \item Кратному вещественному корню $\lambda$ кратности $k$ соответствуют решения $e^{\lambda x}, x e^{\lambda x}, \ldots, x^{k-1} e^{\lambda x}$.
-    \item Паре комплексно сопряжённых корней $\alpha \pm i\beta$ соответствуют решения $e^{\alpha x} \cos \beta x$, $e^{\alpha x} \sin \beta x$.
-    \item Кратной паре $\alpha \pm i\beta$ кратности $k$ соответствуют решения $x^j e^{\alpha x} \cos \beta x$, $x^j e^{\alpha x} \sin \beta x$ для $j = 0, 1, \ldots, k-1$.
+  \item Простому вещественному корню $\lambda$ соответствует решение $e^{\lambda x}$.
+  \item Кратному вещественному корню $\lambda$ кратности $k$ соответствуют решения $e^{\lambda x}, x e^{\lambda x}, \ldots, x^{k-1} e^{\lambda x}$.
+  \item Паре комплексно сопряжённых корней $\alpha \pm i\beta$ соответствуют решения $e^{\alpha x} \cos \beta x$, $e^{\alpha x} \sin \beta x$.
+  \item Кратной паре $\alpha \pm i\beta$ кратности $k$ соответствуют решения $x^j e^{\alpha x} \cos \beta x$, $x^j e^{\alpha x} \sin \beta x$ для $j = 0, 1, \ldots, k-1$.
 \end{itemize}
 
 \textbf{Шаг 1. Анализ решения $y_1 = e^x$.}
@@ -655,48 +711,48 @@ y^{(n)} + a_{n-1} y^{(n-1)} + \ldots + a_1 y' + a_0 y = 0
 
 Этому соответствуют 4 линейно независимых решения:
 \[
-\cos 2x, \quad \sin 2x, \quad x \cos 2x, \quad x \sin 2x.
+  \cos 2x, \quad \sin 2x, \quad x \cos 2x, \quad x \sin 2x.
 \]
 
 \textbf{Шаг 3. Минимальное характеристическое уравнение.}
 
 Характеристическое уравнение должно иметь корни:
 \begin{itemize}
-    \item $\lambda = 1$ (простой);
-    \item $\lambda = 2i$ (кратность 2);
-    \item $\lambda = -2i$ (кратность 2).
+  \item $\lambda = 1$ (простой);
+  \item $\lambda = 2i$ (кратность 2);
+  \item $\lambda = -2i$ (кратность 2).
 \end{itemize}
 
 Характеристический многочлен:
 \[
-p(\lambda) = (\lambda - 1) \cdot (\lambda - 2i)^2 \cdot (\lambda + 2i)^2 = (\lambda - 1) \cdot \left[(\lambda - 2i)(\lambda + 2i)\right]^2.
+  p(\lambda) = (\lambda - 1) \cdot (\lambda - 2i)^2 \cdot (\lambda + 2i)^2 = (\lambda - 1) \cdot \left[(\lambda - 2i)(\lambda + 2i)\right]^2.
 \]
 
 Вычисляем:
 \[
-(\lambda - 2i)(\lambda + 2i) = \lambda^2 + 4.
+  (\lambda - 2i)(\lambda + 2i) = \lambda^2 + 4.
 \]
 
 \[
-p(\lambda) = (\lambda - 1)(\lambda^2 + 4)^2.
+  p(\lambda) = (\lambda - 1)(\lambda^2 + 4)^2.
 \]
 
 Раскроем $(\lambda^2 + 4)^2$:
 \[
-(\lambda^2 + 4)^2 = \lambda^4 + 8\lambda^2 + 16.
+  (\lambda^2 + 4)^2 = \lambda^4 + 8\lambda^2 + 16.
 \]
 
 Теперь умножаем на $(\lambda - 1)$:
 \[
-p(\lambda) = (\lambda - 1)(\lambda^4 + 8\lambda^2 + 16).
+  p(\lambda) = (\lambda - 1)(\lambda^4 + 8\lambda^2 + 16).
 \]
 
 \[
-p(\lambda) = \lambda^5 + 8\lambda^3 + 16\lambda - \lambda^4 - 8\lambda^2 - 16.
+  p(\lambda) = \lambda^5 + 8\lambda^3 + 16\lambda - \lambda^4 - 8\lambda^2 - 16.
 \]
 
 \[
-p(\lambda) = \lambda^5 - \lambda^4 + 8\lambda^3 - 8\lambda^2 + 16\lambda - 16.
+  p(\lambda) = \lambda^5 - \lambda^4 + 8\lambda^3 - 8\lambda^2 + 16\lambda - 16.
 \]
 
 \textbf{Шаг 4. Записываем дифференциальное уравнение.}
@@ -704,43 +760,43 @@ p(\lambda) = \lambda^5 - \lambda^4 + 8\lambda^3 - 8\lambda^2 + 16\lambda - 16.
 Дифференциальное уравнение получается заменой $\lambda^k \to y^{(k)}$:
 
 \[
-y^{(5)} - y^{(4)} + 8y''' - 8y'' + 16y' - 16y = 0.
+  y^{(5)} - y^{(4)} + 8y''' - 8y'' + 16y' - 16y = 0.
 \]
 
 \textbf{Проверка.}
 
 \textit{Проверим $y_1 = e^x$:}
 \[
-y^{(k)} = e^x \text{ для всех } k.
+  y^{(k)} = e^x \text{ для всех } k.
 \]
 \[
-e^x - e^x + 8e^x - 8e^x + 16e^x - 16e^x = 0. \quad \checkmark
+  e^x - e^x + 8e^x - 8e^x + 16e^x - 16e^x = 0. \quad \checkmark
 \]
 
 \textit{Проверим $y_2 = x \sin 2x$:}
 
 Вычислим производные:
 \begin{align*}
-y &= x \sin 2x \\
-y' &= \sin 2x + 2x \cos 2x \\
-y'' &= 2\cos 2x + 2\cos 2x - 4x\sin 2x = 4\cos 2x - 4x\sin 2x \\
-y''' &= -8\sin 2x - 4\sin 2x - 8x\cos 2x = -12\sin 2x - 8x\cos 2x \\
-y^{(4)} &= -24\cos 2x - 8\cos 2x + 16x\sin 2x = -32\cos 2x + 16x\sin 2x \\
-y^{(5)} &= 64\sin 2x + 16\sin 2x + 32x\cos 2x = 80\sin 2x + 32x\cos 2x
+  y &= x \sin 2x \\
+  y' &= \sin 2x + 2x \cos 2x \\
+  y'' &= 2\cos 2x + 2\cos 2x - 4x\sin 2x = 4\cos 2x - 4x\sin 2x \\
+  y''' &= -8\sin 2x - 4\sin 2x - 8x\cos 2x = -12\sin 2x - 8x\cos 2x \\
+  y^{(4)} &= -24\cos 2x - 8\cos 2x + 16x\sin 2x = -32\cos 2x + 16x\sin 2x \\
+  y^{(5)} &= 64\sin 2x + 16\sin 2x + 32x\cos 2x = 80\sin 2x + 32x\cos 2x
 \end{align*}
 
 Подставляем:
 \begin{align*}
-&y^{(5)} - y^{(4)} + 8y''' - 8y'' + 16y' - 16y = \\
-&= (80\sin 2x + 32x\cos 2x) - (-32\cos 2x + 16x\sin 2x) \\
-&\quad + 8(-12\sin 2x - 8x\cos 2x) - 8(4\cos 2x - 4x\sin 2x) \\
-&\quad + 16(\sin 2x + 2x\cos 2x) - 16(x\sin 2x) \\
-&= 80\sin 2x + 32x\cos 2x + 32\cos 2x - 16x\sin 2x \\
-&\quad - 96\sin 2x - 64x\cos 2x - 32\cos 2x + 32x\sin 2x \\
-&\quad + 16\sin 2x + 32x\cos 2x - 16x\sin 2x \\
-&= (80 - 96 + 16)\sin 2x + (32 - 64 + 32)x\cos 2x \\
-&\quad + (32 - 32)\cos 2x + (-16 + 32 - 16)x\sin 2x \\
-&= 0 \cdot \sin 2x + 0 \cdot x\cos 2x + 0 \cdot \cos 2x + 0 \cdot x\sin 2x = 0. \quad \checkmark
+  &y^{(5)} - y^{(4)} + 8y''' - 8y'' + 16y' - 16y = \\
+  &= (80\sin 2x + 32x\cos 2x) - (-32\cos 2x + 16x\sin 2x) \\
+  &\quad + 8(-12\sin 2x - 8x\cos 2x) - 8(4\cos 2x - 4x\sin 2x) \\
+  &\quad + 16(\sin 2x + 2x\cos 2x) - 16(x\sin 2x) \\
+  &= 80\sin 2x + 32x\cos 2x + 32\cos 2x - 16x\sin 2x \\
+  &\quad - 96\sin 2x - 64x\cos 2x - 32\cos 2x + 32x\sin 2x \\
+  &\quad + 16\sin 2x + 32x\cos 2x - 16x\sin 2x \\
+  &= (80 - 96 + 16)\sin 2x + (32 - 64 + 32)x\cos 2x \\
+  &\quad + (32 - 32)\cos 2x + (-16 + 32 - 16)x\sin 2x \\
+  &= 0 \cdot \sin 2x + 0 \cdot x\cos 2x + 0 \cdot \cos 2x + 0 \cdot x\sin 2x = 0. \quad \checkmark
 \end{align*}
 
 \textbf{Ответ.}
@@ -749,5 +805,5 @@ y^{(5)} &= 64\sin 2x + 16\sin 2x + 32x\cos 2x = 80\sin 2x + 32x\cos 2x
 
 Уравнение:
 \[
-\boxed{y^{(5)} - y^{(4)} + 8y''' - 8y'' + 16y' - 16y = 0.}
+  \boxed{y^{(5)} - y^{(4)} + 8y''' - 8y'' + 16y' - 16y = 0.}
 \]
