--- a/solutions/analysis/10.tex
+++ b/solutions/analysis/10.tex
@@ -18,33 +18,34 @@
 
 Верхний интеграл Дарбу: $J^* (f) \coloneqq \inf_{T} S(f, T)$.
 
-\Def $f: [a, b] \rightarrow \R$ интегрируема по Риману на отрезке $[a, b]$, если 
+\Def $f: [a, b] \rightarrow \R$ интегрируема по Риману на отрезке $[a, b]$, если
 
 \begin{gather*}
-    \exists J \in \R \; \forall \eps > 0 \;\exists \delta > 0 \;\forall T: l(T) < \delta \hookrightarrow 
-    \begin{cases}
-        |s(f, T) - J| < \eps, \\
-        |S(f, T) - J| < \eps.
-    \end{cases}
+  \exists J \in \R \; \forall \eps > 0 \;\exists \delta > 0 \;\forall T: l(T) < \delta \hookrightarrow
+  \begin{cases}
+    |s(f, T) - J| < \eps, \\
+    |S(f, T) - J| < \eps.
+  \end{cases}
 \end{gather*}
 
 \Theor{Необходимое условие интегрируемости} $f \in R([a, b]) \;\Rightarrow\; f \in B([a, b])$ (ограничена на этом отрезке).
 
-\Theor{Критерий Лебега интегрируемости по Риману}. 
+\Theor{Критерий Лебега интегрируемости по Риману}.
 
 \begin{gather*}
-    f \in R([a, b]) \iff
-    \begin{cases*}
-        f \in B([a, b]), \\
-        \text{Множество точек разрыва $f$ на [a, b] имеет лебегову меру ноль}.
-    \end{cases*}
+  f \in R([a, b]) \iff
+  \begin{cases*}
+    f \in B([a, b]), \\
+    \text{Множество точек разрыва $f$ на [a, b] имеет лебегову меру ноль}.
+  \end{cases*}
 \end{gather*}
 
 \Theor{Критерий Дарбу интегрируемости по Риману}
 
 $f \in R([a, b]) \iff J_*(f) = J^*(f) \in \R$.
 
-\Def Для разбиения $T$ отрезка $[a, b]$ выборкой назовем конечный набор точек $\{\xi_i\}_{i=1}^{N_T}$, такой что $\forall i \in \{1, \dots, N_T\} \hookrightarrow \xi_i \in [x_{i-1}, x_i]$.
+\Def Для разбиения $T$ отрезка $[a, b]$ выборкой назовем конечный набор точек $\{\xi_i\}_{i=1}^{N_T}$, такой что $\forall i \in \{1, \dots, N_T\} \hookrightarrow \xi_i
+\in [x_{i-1}, x_i]$.
 
 Интегральная сумма Римана: $\Sigma(f, T, \xi_T) = \sum_{i=1}^N f(\xi_i) (x_i - x_{i-1})$.
 
@@ -64,7 +65,7 @@ $R([a, b])$ линейно, причем $\int_a^b (\alpha f(x) + \beta g(x)) dx
 
 \Theor{Интегрируемость неравенств}
 
-Пусть $f, g \in R([a, b])$; $f(x) \leq g(x) \;\forall x\in [a, b]$. 
+Пусть $f, g \in R([a, b])$; $f(x) \leq g(x) \;\forall x\in [a, b]$.
 
 Тогда $\int_a^b f(x)dx \leq \int_a^b g(x) dx$.
 
@@ -87,13 +88,15 @@ $\forall T \; \forall \xi \hookrightarrow \Sigma(f, T, \xi) \leq \Sigma(g, T, \x
 По критерию Лебега, $f$ ограничена и множество точек разрыва имеет меру 0. Очевидно, то же верно для $|f|$. Тогда по критерию Лебега, $|f| \in R([a, b])$.
 
 При этом
-$\begin{cases*}
-    f(x) \leq |f(x)|, \\ -f(x) \leq |f(x)|,
+$
+\begin{cases*}
+  f(x) \leq |f(x)|, \\ -f(x) \leq |f(x)|,
 \end{cases*}$
 откуда по предыдущей теореме
-$\begin{cases*}
-    \int_a^b f(x) dx \leq \int_a^b |f(x)| dx, \\
-    \int_a^b -f(x) dx \leq \int_a^b |f(x)| dx.
+$
+\begin{cases*}
+  \int_a^b f(x) dx \leq \int_a^b |f(x)| dx, \\
+  \int_a^b -f(x) dx \leq \int_a^b |f(x)| dx.
 \end{cases*}$
 
 Используя линейность, выносим минус во втором неравенстве и получаем $\left|\int_a^b f(x) dx\right| \leq \int_a^b |f(x)| dx$.
@@ -113,12 +116,13 @@ $\begin{cases*}
 \Note Множество функций, имеющих первообразную на $[a, b]$, и множество функций, интегрируемых на $[a, b]$, пересекаются, но не вложены:
 
 \begin{enumerate}
-    \item \textbf{Производная} функции $F(x) = \begin{cases*}
-        x^2 \sin \frac{1}{x^2}, x \neq 0, \\
-        0, x = 0
+  \item \textbf{Производная} функции $F(x) =
+    \begin{cases*}
+      x^2 \sin \frac{1}{x^2}, x \neq 0, \\
+      0, x = 0
     \end{cases*}$ имеет первообразную на $[-a, a]$ (очевидно, $F$), но не интегрируема на любом интервале, содержащем 0, потому что неограничена в окрестности нуля.
 
-    \item $f(x) = sign(x)$ интегрируема по Риману по критерию Лебега, но не имеет первообразной на интервале, содержащем 0 (доказывается от противного).
+  \item $f(x) = sign(x)$ интегрируема по Риману по критерию Лебега, но не имеет первообразной на интервале, содержащем 0 (доказывается от противного).
 \end{enumerate}
 
 \textbf{Интеграл с переменным верхним пределом}
@@ -139,26 +143,27 @@ $|F(x_1) - F(x_2)| \leq \left|\int_{x_1}^{x_2} f(t) dt\right| \leq \int_{x_1}^{x
 
 Пусть $f \in C([a, b])$.
 
-Тогда $F \in C^1([a, b])$. 
+Тогда $F \in C^1([a, b])$.
 
 Причем $F'(x) = f(x) \;\forall x \in [a, b]$ \\(с точностью до соответствующих соглашений об односторонних производных на границах).
 
 \Proof
 
 \begin{gather*}
-    \left|\frac{F(x) - F(x^0)}{x - x^0} - f(x^0)\right| = \left|\frac{\int_x^{x^0} f(t) dt - f(x^0) \cdot (x - x^0)}{x - x^0}\right| =
-    \left|\frac{\int_x^{x^0} f(t) dt - \int_x^{x^0} f(x^0) dt}{x-x^0}\right| \leq \frac{\int_x^{x^0} |f(t) - f(x^0)| dt}{|x - x^0|}.
+  \left|\frac{F(x) - F(x^0)}{x - x^0} - f(x^0)\right| = \left|\frac{\int_x^{x^0} f(t) dt - f(x^0) \cdot (x - x^0)}{x - x^0}\right| =
+  \left|\frac{\int_x^{x^0} f(t) dt - \int_x^{x^0} f(x^0) dt}{x-x^0}\right| \leq \frac{\int_x^{x^0} |f(t) - f(x^0)| dt}{|x - x^0|}.
 \end{gather*}
 
 Из непрерывности, $\forall \eps > 0 \;\exists \delta > 0 \;\forall x \in \mathring U_\delta (x^0) \cap [a, b] \hookrightarrow |f(x) - f(x^0)| < \eps$.
 
-Продолжая неравенство выше, получаем 
+Продолжая неравенство выше, получаем
 
 \begin{gather*}
-    \frac{\int_x^{x^0} |f(t) - f(x^0)| dt}{|x - x^0|} \leq \frac{\eps \int_x^{x^0} dt}{|x - x^0|} = \eps.
+  \frac{\int_x^{x^0} |f(t) - f(x^0)| dt}{|x - x^0|} \leq \frac{\eps \int_x^{x^0} dt}{|x - x^0|} = \eps.
 \end{gather*}
 
-Итого, $\forall \eps > 0 \;\exists \delta > 0 \;\forall x \in \mathring U_\delta (x^0) \cap [a, b] \hookrightarrow \left|\frac{F(x) - F(x^0)}{x - x^0} - f(x^0)\right| < \eps$, что по определению значит, что $\exists F'(x^0) = f(x^0)$ для произвольной точки $x^0 \in (a, b)$.
+Итого, $\forall \eps > 0 \;\exists \delta > 0 \;\forall x \in \mathring U_\delta (x^0) \cap [a, b] \hookrightarrow \left|\frac{F(x) - F(x^0)}{x - x^0} - f(x^0)\right| <
+\eps$, что по определению значит, что $\exists F'(x^0) = f(x^0)$ для произвольной точки $x^0 \in (a, b)$.
 
 Аналогично расписывается для краевых точек $a, b$.
 
@@ -175,8 +180,8 @@ $|F(x_1) - F(x_2)| \leq \left|\int_{x_1}^{x_2} f(t) dt\right| \leq \int_{x_1}^{x
 \Proof
 
 \begin{gather*}
-    F(x) = \int_a^x f(t) dt + C. \\
-    F(b) - F(a) = \left(\int_a^b f(t)dt + C\right) - \left(\int_a^a f(t)dt + C\right) = \int_a^b f(t)dt.
+  F(x) = \int_a^x f(t) dt + C. \\
+  F(b) - F(a) = \left(\int_a^b f(t)dt + C\right) - \left(\int_a^a f(t)dt + C\right) = \int_a^b f(t)dt.
 \end{gather*}
 
 \Endproof
