--- a/solutions/analysis/2.tex
+++ b/solutions/analysis/2.tex
@@ -2,23 +2,26 @@
 
 \Def $\hat \R := \R \cup \{ -\infty, +\infty, \infty \}$
 
-\Def Пусть $x_0, A \in \hat\R, \delta_0 > 0, f: \mathring U_{\delta_0}(x_0) \to \R$. Будем говорить, что $A$ - предел функции $f$ в точке $x_0$ и записывать $\lim\limits_{x \to x_0} f(x) = A$, если
+\Def Пусть $x_0, A \in \hat\R, \delta_0 > 0, f: \mathring U_{\delta_0}(x_0) \to \R$. Будем говорить, что $A$ - предел функции $f$ в точке $x_0$ и записывать
+$\lim\limits_{x \to x_0} f(x) = A$, если
 \begin{equation*}
-    \forall \varepsilon > 0 \; \exists \delta_\varepsilon < \delta_0: \forall x \in \mathring U_{\delta_\varepsilon}(x_0) \hookrightarrow f(x) \in U_\varepsilon(A)
+  \forall \varepsilon > 0 \; \exists \delta_\varepsilon < \delta_0: \forall x \in \mathring U_{\delta_\varepsilon}(x_0) \hookrightarrow f(x) \in U_\varepsilon(A)
 \end{equation*}
 
 \Def Последовательностью Гейне в точке $x_0 \in \hat\R$ называется такая последовательность $\{x_n\} \subset \R$:
 \begin{enumerate}
-    \item $x_n \to x_0, n \to \infty$
-    \item $\forall n \in \N \hookrightarrow x_n \neq x_0$
+  \item $x_n \to x_0, n \to \infty$
+  \item $\forall n \in \N \hookrightarrow x_n \neq x_0$
 \end{enumerate}
 
-\Def Пусть $x_0 \in \hat\R, A \in \hat\R$. Пусть $f: \mathring U_{\delta_0}(x_0) \to \R$. 
-Будем говорить, что $A$ - предел функции $f$ в точке $x_0$ и записывать $\lim\limits_{x \to x_0} f(x) = A$, если для всякой последовательности Гейне $\{x_n\} \subset \mathring U_{\delta_0}(x_0)$ в точке $x_0$ выполнено, что $f(x_n) \to A, n \to \infty$.
+\Def Пусть $x_0 \in \hat\R, A \in \hat\R$. Пусть $f: \mathring U_{\delta_0}(x_0) \to \R$.
+Будем говорить, что $A$ - предел функции $f$ в точке $x_0$ и записывать $\lim\limits_{x \to x_0} f(x) = A$, если для всякой последовательности Гейне $\{x_n\} \subset
+\mathring U_{\delta_0}(x_0)$ в точке $x_0$ выполнено, что $f(x_n) \to A, n \to \infty$.
 
 \Th Определения пределов функций выше эквивалентны.
 
-\Def Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$. Будем говорить, что $f$ непрерывна в точке $x_0$, если $\exists \lim\limits_{x \to x_0} f(x) = f(x_0)$.
+\Def Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$. Будем говорить, что $f$ непрерывна в точке $x_0$, если $\exists \lim\limits_{x \to x_0}
+f(x) = f(x_0)$.
 
 \Def Пусть $\delta_0 > 0$, $x_0 \in \mathbb{R}$, $f: U_{\delta_0} (x_0) \to \R$. Будем говорить, что $f$ разрывна в точке $x_0$, если она не непрерывна в точке $x_0$.
 
@@ -78,7 +81,8 @@ $n\in\mathbb{N}$ существует $a_n\in[a,b]$ такое, что
 \(
   M - \frac1n < f(x_n) \le M.
 \).
-То есть получили $f(x_n) \to M$. Выберем из них сходящуюся подпоследовательность по теореме Больцано-Вейерштрасса $x_{n_k} \to x_M$. По непрерывности функции $f(x_{n_k}) \to f(x_M)$.
+То есть получили $f(x_n) \to M$. Выберем из них сходящуюся подпоследовательность по теореме Больцано-Вейерштрасса $x_{n_k} \to x_M$. По непрерывности функции $f(x_{n_k})
+\to f(x_M)$.
 Но по построению $f(x_{n_k}) \to M$. В силу единственности предела $f(x_M) = M$. Что и требовалось.
 
 \Endproof
