--- a/solutions/logic/27.tex
+++ b/solutions/logic/27.tex
@@ -10,10 +10,10 @@
 
 $\square$
 
-Рассмотрим цепочку из $n$ элементов. На первую позицию можно поставить любой из $n$ элементов. На позицию $i$ можно поставить любой из $n + 1 - i$ оставшихся. Получаем требуемое равенство.
+Рассмотрим цепочку из $n$ элементов. На первую позицию можно поставить любой из $n$ элементов. На позицию $i$ можно поставить любой из $n + 1 - i$ оставшихся. Получаем
+требуемое равенство.
 
 $\blacksquare$
-
 
 \Statement Существует ровно $A_n^k := \frac{n!}{(n-k)!}$ вариантов размещений $k$ элементов из $n$ -- элементного множества.
 
@@ -50,18 +50,16 @@ $\square$
 Для доказательства построим биекцию. Пусть $k = k_1 + k_2 + \dots + k_n$. Ему будет соответствовать следующий набор:
 
 \[
-\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_1}\;{\large\bullet}\;
-\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_2}\;{\large\bullet}\;
-\cdots\;
-{\large\bullet}\;
-\underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_n}
+  \underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_1}\;{\large\bullet}\;
+  \underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_2}\;{\large\bullet}\;
+  \cdots\;
+  {\large\bullet}\;
+  \underbrace{\bigcirc\!\bigcirc\!\cdots\!\bigcirc}_{k_n}
 \]
 
 \[
-k = k_1 + k_2 + \dots + k_n
+  k = k_1 + k_2 + \dots + k_n
 \]
-
-
 
 Аналогично и в обратную сторону.
 
@@ -73,10 +71,12 @@ $\blacksquare$
 
 Рассмотрим выражение $(x+y)^n$. Задача --- определить коэффициент при $x^ky^{n-k}$.
 
-Пронумеруем скобки следующим образом: $(x_1 + y_1)\cdot(x_2 + y_2) \cdot \dots \cdot (x_n + y_n)$. Заметим, что коэффициент будет равен количеству вариантов выбора $k$ cкобок, из которых будет выбран $x$. А значит равен $C_n^k$.
+Пронумеруем скобки следующим образом: $(x_1 + y_1)\cdot(x_2 + y_2) \cdot \dots \cdot (x_n + y_n)$. Заметим, что коэффициент будет равен количеству вариантов выбора $k$
+cкобок, из которых будет выбран $x$. А значит равен $C_n^k$.
 
 \textbf{Полиномиальный коэффициент}
 
 Рассмотрим выражение $(x_1 + x_2 + \dots + x_m)^n$. Задача --- определить коэффициент при $x^{n_1}x^{n_2}\dots x^{n_m}$, где $\displaystyle\sum_{i=1}^m x^{n_i} = n$.
 
-Занумеруем скобки. Выбрать скобки с $x_1$ будет $C_n^{n_1}$ способов. Из оставшихся с $x_2$ --- $C_{n-n_1}^{n_2}$ способов и т. д. В итоге получим $C_n^{n_1} \cdot C_{n-n_1}^{n_2}\dots C^{n_m}_{n - n_1 - n_2 - \dots - n_m} = \frac{n!}{n_1! \cdot n_2! \dots n_m!}$ способов.
+Занумеруем скобки. Выбрать скобки с $x_1$ будет $C_n^{n_1}$ способов. Из оставшихся с $x_2$ --- $C_{n-n_1}^{n_2}$ способов и т. д. В итоге получим $C_n^{n_1} \cdot
+C_{n-n_1}^{n_2}\dots C^{n_m}_{n - n_1 - n_2 - \dots - n_m} = \frac{n!}{n_1! \cdot n_2! \dots n_m!}$ способов.
