--- a/style.tex
+++ b/style.tex
@@ -1,4 +1,4 @@
-\usepackage{geometry}     
+\usepackage{geometry}
 % задание полей текста
 \geometry{left=10mm,right=10mm,top=20mm,bottom=20mm}
 \usepackage{listings}
@@ -29,11 +29,9 @@
 \usepackage[normalem]{ulem}
 \setlength\parindent{0pt}
 
-
 \usepackage{mathtools, nccmath}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
-
 
 \sloppy                     % строго соблюдать границы текста
 \linespread{1.3}            % коэффициент межстрочного интервала
@@ -132,7 +130,8 @@
 \newcommand{\infsamp}[1]{{#1}_1, {#1}_2, \ldots}
 \newcommand{\sampf}[3]{{#1}_1(#3), \ldots, {#1}_{#2}(#3)}
 
-\newcommand{\charac}[2]{\varphi_{#1}\brackets{#2}} % Хар.функция от распределения с.в. от аргумента
+\newcommand{\charac}[2]{\varphi_{#1}\brackets{#2}} % Хар.функция от
+% распределения с.в. от аргумента
 \newcommand{\proj}[2]{\text{proj}_{{#1}} {#2}}
 
 \newcommand{\pn}{\text{п.н.}}
@@ -149,51 +148,59 @@
 \newcommand{\probspace}{(\Omega,\: \F,\: \P)}
 \newcommand{\ddfrac}[2]{\frac{\displaystyle #1}{\displaystyle #2}}
 
-\newcommand{\todo}[1]{\section{TODO}
-\begin{center}
+\newcommand{\todo}[1]{
+  \section{TODO}
+  \begin{center}
     \LARGE #1
 \end{center}}
 
 \newcommand{\drawsome}[1]{
-    \begin{figure}[h!]
-            \centering
-            \includegraphics[scale=0.7]{#1}
-            \label{fig:first}
-    \end{figure}
+  \begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.7]{#1}
+    \label{fig:first}
+  \end{figure}
 }
 
 \newcommand{\drawsomemedium}[1]{
-    \begin{figure}[h!]
-            \centering
-            \includegraphics[scale=0.45]{#1}
-            \label{fig:first}
-    \end{figure}
+  \begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.45]{#1}
+    \label{fig:first}
+  \end{figure}
 }
 
 \newcommand{\drawsomesmall}[1]{
-    \begin{figure}[h!]
-            \centering
-            \includegraphics[scale=0.3]{#1}
-            \label{fig:first}
-    \end{figure}
+  \begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.3]{#1}
+    \label{fig:first}
+  \end{figure}
 }
 
-
 \hypersetup{
-    pdfstartview=FitH,
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=magenta,      
-    urlcolor=cyan,
+  pdfstartview=FitH,
+  colorlinks=true,
+  linkcolor=blue,
+  filecolor=magenta,
+  urlcolor=cyan,
 }
 
 \usepackage{titleps}                       % колонтитулы
 
 \newpagestyle{main}{
-  \setheadrule{.4pt}                      
+  \setheadrule{.4pt}
   \sethead{\coursename}{}{\hyperlink{intro}{\;Назад к содержанию}}
-  \setfootrule{.4pt}                       
-  \setfoot{\coursedate \; ВШПИ МФТИ}{}{\thepage} 
-}      
+  \setfootrule{.4pt}
+  \setfoot{\coursedate \; ВШПИ МФТИ}{}{\thepage}
+}
 
 \pagestyle{main}
+
+% tex-fmt: off
+\newenvironment{orcase}{%
+  \left[\begin{array}{l}%
+}{%
+  \end{array}\right.%
+}
+% tex-fmt: on
